Move chord modifiers into superscripts

--- a/song-template.tex
+++ b/song-template.tex
@@ -10,7 +10,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Ej.: \[A#] \[A&] \[Am] \[A7]}
+      {\nolyrics Ej.: \[A#] \[A&] \[Am] \[A\⁷]}
     \endverse
   \fi
 
