--- a/songs-extra/jo-atyank-koszonjuk-neked.tex
+++ b/songs-extra/jo-atyank-koszonjuk-neked.tex
@@ -2,13 +2,13 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: /: \[D] \[D4] \[D] \[D2] :/ \rep{2}}
+      {\nolyrics Előjáték: /: \[D] \[D\⁴] \[D] \[D\²] :/ \rep{2}}
     \endverse
   \fi
 
   \beginverse*\memorize
     \[D]Jó Atyánk, köszönjük Néked \[G]_____-t,
-    Szívünkbe zártuk, \[D]hála \[D4]érte! \[D] \[D2]
+    Szívünkbe zártuk, \[D]hála \[D\⁴]érte! \[D] \[D\²]
   \endverse
 
   \beginverse*
@@ -18,13 +18,13 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics \[H7]}
+      {\nolyrics \[H\⁷]}
     \endverse
   \fi
 
   \beginverse*\memorize
     \[E]Ó, Urunk, mi \[A]egyet aka\[E]runk,
-    Kik ebben a dalban \[H7]együtt vagyunk:
+    Kik ebben a dalban \[H\⁷]együtt vagyunk:
   \endverse
 
   \beginverse*
