--- a/songs-mass/isten-baranya-k159.tex
+++ b/songs-mass/isten-baranya-k159.tex
@@ -6,7 +6,7 @@
 
   \beginverse
     \[Dm]Isten bárá\[Gm]nya, Te \[A#]elveszed a világ bűne\[F]it,
-    \[Gm]Irgalmazz nekü\[C7]nk, \[F]irgalmazz nekü\[Dm]nk, \[Gm]irgalmazz nekü\[A]nk! \[Dm]
+    \[Gm]Irgalmazz nekü\[C\⁷]nk, \[F]irgalmazz nekü\[Dm]nk, \[Gm]irgalmazz nekü\[A]nk! \[Dm]
   \endverse
 
   \beginverse
