--- a/songs-mass/isten-baranya-k299.tex
+++ b/songs-mass/isten-baranya-k299.tex
@@ -6,28 +6,28 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Em] \[Am] \[E&dim] \[Em]}
+      {\nolyrics Előjáték: \[Em] \[Am] \[E&\ᵈⁱᵐ] \[Em]}
     \endverse
   \fi
 
   \beginverse
-    \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D7]drága árán
-    \[G]Mind elveszed, \[Am]irgal\[H7]mazz ne\[Em]kem!
+    \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D\⁷]drága árán
+    \[G]Mind elveszed, \[Am]irgal\[H\⁷]mazz ne\[Em]kem!
   \endverse
 
   \beginverse
-    \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D7]drága árán
-    \[G]Mind elveszed, \[Am]irgal\[H7]mazz ne\[Em]künk!
+    \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D\⁷]drága árán
+    \[G]Mind elveszed, \[Am]irgal\[H\⁷]mazz ne\[Em]künk!
   \endverse
 
   \beginverse
-    \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D7]drága árán
-    \[G]Mind elveszed, \[Am]adj bé\[H7]két ne\[Em]künk!
+    \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D\⁷]drága árán
+    \[G]Mind elveszed, \[Am]adj bé\[H\⁷]két ne\[Em]künk!
   \endverse
 
   \ifchorded
     \beginverse*
-      {\nolyrics Utójáték: \[Em] \[Am] \[E&dim] \[Em]}
+      {\nolyrics Utójáték: \[Em] \[Am] \[E&\ᵈⁱᵐ] \[Em]}
     \endverse
   \fi
 
