--- a/songs-mass/isten-baranya-k302.tex
+++ b/songs-mass/isten-baranya-k302.tex
@@ -5,7 +5,7 @@
 
   \beginverse\memorize
     \[Em]Isten báránya, Te \[D]elveszed a \[C]világ bűne\[Em]it,
-    \[A]Irgalmazz, \[C]irgalmazz ne\[Em]künk! \[Em7] \[A] \[Am]
+    \[A]Irgalmazz, \[C]irgalmazz ne\[Em]künk! \[Em\⁷] \[A] \[Am]
   \endverse
 
   \beginverse
