--- a/songs-mass/szent-vagy-k159.tex
+++ b/songs-mass/szent-vagy-k159.tex
@@ -5,17 +5,17 @@
 ]
 
   \beginverse*
-    \[C7]
-    Szent \[F]vagy, \[C7] szent \[F]vagy, \[A#]szent vagy, \[C7]mindenség Ura, \[F]Istene! \[C7]
-    Dicső\[F]séged \[C7] betöl\[F]ti a \[A#]mennyet \[C7]és a föl\[F]det.
+    \[C\⁷]
+    Szent \[F]vagy, \[C\⁷] szent \[F]vagy, \[A#]szent vagy, \[C\⁷]mindenség Ura, \[F]Istene! \[C\⁷]
+    Dicső\[F]séged \[C\⁷] betöl\[F]ti a \[A#]mennyet \[C\⁷]és a föl\[F]det.
   \endverse
 
   \beginchorus
-    /: \[C7]Hozsanna a magasság\[F]ban! \[Gm]Áldott, aki \[C7]jön \[F]Úr nevé\[Dm]ben. :/ \rep{2}
+    /: \[C\⁷]Hozsanna a magasság\[F]ban! \[Gm]Áldott, aki \[C\⁷]jön \[F]Úr nevé\[Dm]ben. :/ \rep{2}
   \endchorus
 
   \beginverse*
-    \[C7]Hozsanna a magasság\[F]ban!
+    \[C\⁷]Hozsanna a magasság\[F]ban!
   \endverse
 
 \endsong
