--- a/songs-mass/szent-vagy-k192.tex
+++ b/songs-mass/szent-vagy-k192.tex
@@ -6,15 +6,15 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[F] \[Em] \[Am] \[Dm] \[G] \[G7] \[C]}
+      {\nolyrics Előjáték: \[F] \[Em] \[Am] \[Dm] \[G] \[G\⁷] \[C]}
     \endverse
   \fi
 
   \beginverse\memorize
-    Szent vagy, \[C]szent vagy, szent vagy, \[G7]sz{\_{e}}nt vagy,
+    Szent vagy, \[C]szent vagy, szent vagy, \[G\⁷]sz{\_{e}}nt vagy,
     Minden\[F]ségnek Ura, \[G]Istene, \[C]
-    \[C7] Dicső\[F]séged betölti a menny\[Em]et és a Föld\[Am]et,
-    Hozsan\[Dm]na \[G] a magas\[G7]ság\[C]ban!
+    \[C\⁷] Dicső\[F]séged betölti a menny\[Em]et és a Föld\[Am]et,
+    Hozsan\[Dm]na \[G] a magas\[G\⁷]ság\[C]ban!
   \endverse
 
   \beginverse
@@ -26,7 +26,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Utójáték: \[F] \[Em] \[Am] \[Dm] \[G] \[G7] \[C]}
+      {\nolyrics Utójáték: \[F] \[Em] \[Am] \[Dm] \[G] \[G\⁷] \[C]}
     \endverse
   \fi
 
