--- a/songs-mass/uram-irgalmazz-k129B.tex
+++ b/songs-mass/uram-irgalmazz-k129B.tex
@@ -6,13 +6,13 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[A6] \[G6] \[A] \[G-D]}
+      {\nolyrics Előjáték: \[A\⁶] \[G\⁶] \[A] \[G-D]}
     \endverse
   \fi
 
   \beginverse\memorize
-    \[A6]Jézus Krisztus, Téged \[G6]elküldött az Atya,
-    Hogy \[A]gyógyítsd a megtört \[D]szívűeket. \[D7]
+    \[A\⁶]Jézus Krisztus, Téged \[G\⁶]elküldött az Atya,
+    Hogy \[A]gyógyítsd a megtört \[D]szívűeket. \[D\⁷]
     /: Uram, \[G]irgalmazz nekünk!
     Uram, \[D]irgalmazz ne\[Hm]künk!
     Uram, \[Em]irgal\[A]mazz nek\[G]ünk! \[D] :/ \rep{2}
