--- a/songs-mass/uram-irgalmazz-k159.tex
+++ b/songs-mass/uram-irgalmazz-k159.tex
@@ -8,23 +8,23 @@
     \beginverse*
       {\nolyrics
         Előjáték:
-        /: \[Dm] \[Gm] \[C7] \[F] :/ \rep{2}
-        \[Dm] \[Gm] \[A7] \[Dm]
+        /: \[Dm] \[Gm] \[C\⁷] \[F] :/ \rep{2}
+        \[Dm] \[Gm] \[A\⁷] \[Dm]
       }
     \endverse
   \fi
 
   \beginverse*
-    \[Dm] Uram, irgal\[Gm]mazz! \[C7] Uram, irgal\[F]mazz!
-    \[Dm] Krisztus, kegyel\[Gm]mezz! \[C7] Krisztus, kegyel\[F]mezz!
-    \[Dm] Uram, irgal\[Gm]mazz! \[A7] Uram, irgal\[Dm]mazz!
+    \[Dm] Uram, irgal\[Gm]mazz! \[C\⁷] Uram, irgal\[F]mazz!
+    \[Dm] Krisztus, kegyel\[Gm]mezz! \[C\⁷] Krisztus, kegyel\[F]mezz!
+    \[Dm] Uram, irgal\[Gm]mazz! \[A\⁷] Uram, irgal\[Dm]mazz!
   \endverse
 
   \ifchorded
     \beginverse*
       {\nolyrics Utójáték:
-        \[Dm] \[Gm] \[C7] \[F]
-        \[Dm] \[Gm] \[A7] \[Dm]
+        \[Dm] \[Gm] \[C\⁷] \[F]
+        \[Dm] \[Gm] \[A\⁷] \[Dm]
       }
     \endverse
   \fi
