--- a/songs-taize/gyujts-ejszakankba-fenyt.tex
+++ b/songs-taize/gyujts-ejszakankba-fenyt.tex
@@ -7,7 +7,7 @@
     \[H]Gyújts éjszakánkba \[Em]fényt, hadd égjen a
     Soha ki nem al\[D]vó \[G]tűz, a ki nem \[C]al\[G]vó \[D]tűz!
     Gyújts \[G]éjszakánkba \[C]fényt, hadd égjen a
-    \[H]Soha ki nem \[Em]al\[Am6]vó \[H]tűz, a ki nem \[Em]al\[Am6]vó \[H]tűz!
+    \[H]Soha ki nem \[Em]al\[Am\⁶]vó \[H]tűz, a ki nem \[Em]al\[Am\⁶]vó \[H]tűz!
   \endverse
 
 \endsong
