--- a/songs-taize/jezus-majd-gondolj-ram.tex
+++ b/songs-taize/jezus-majd-gondolj-ram.tex
@@ -4,7 +4,7 @@
 ]
 
   \beginverse*
-    \[D]Jézus, majd \[Em7]gondolj rám, \[A]ha a Te országod \[D]{\_{e}}ljön.
+    \[D]Jézus, majd \[Em\⁷]gondolj rám, \[A]ha a Te országod \[D]{\_{e}}ljön.
     \[Hm]Jézus, majd \[Em]gondolj rám, \[A]ha a Te országod \[D]eljön.
   \endverse
 
