--- a/songs-taize/ne-felj-ne-aggodj.tex
+++ b/songs-taize/ne-felj-ne-aggodj.tex
@@ -4,10 +4,10 @@
 ]
 
   \beginverse*
-    \[Am]Ne félj, ne \[Dm7]aggódj, \[G]ne sírj, ne \[Cmaj7]bánkódj:
-    \[F]Ha tiéd \[Dm6]Isten, \[E]tiéd már \[Am]minden.
-    \[Am]Ne félj, ne \[Dm7]aggódj, \[G]ne sírj, ne \[Cmaj7]bánkódj:
-    \[F]Elég \[Dm6]Ő \[E]né\[Am]ked.
+    \[Am]Ne félj, ne \[Dm\⁷]aggódj, \[G]ne sírj, ne \[Cmaj\⁷]bánkódj:
+    \[F]Ha tiéd \[Dm\⁶]Isten, \[E]tiéd már \[Am]minden.
+    \[Am]Ne félj, ne \[Dm\⁷]aggódj, \[G]ne sírj, ne \[Cmaj\⁷]bánkódj:
+    \[F]Elég \[Dm\⁶]Ő \[E]né\[Am]ked.
   \endverse
 
 \endsong
