--- a/songs-taize/varj-es-ne-felj.tex
+++ b/songs-taize/varj-es-ne-felj.tex
@@ -4,8 +4,8 @@
 ]
 
   \beginverse*
-    \[Em]Várj és ne \[C]félj, az \[Am6]Úr jön \[H7]már!
-    \[Em]Várj \[D]és ne \[G]félj, hű \[Am7]szív\[H]vel \[Em]várj!
+    \[Em]Várj és ne \[C]félj, az \[Am\⁶]Úr jön \[H\⁷]már!
+    \[Em]Várj \[D]és ne \[G]félj, hű \[Am\⁷]szív\[H]vel \[Em]várj!
   \endverse
 
 \endsong
