--- a/songs/add-tovabb.tex
+++ b/songs/add-tovabb.tex
@@ -5,7 +5,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[D] \[F#m] \[G] \[A] \[A7]}
+      {\nolyrics Előjáték: \[D] \[F#m] \[G] \[A] \[A\⁷]}
     \endverse
   \fi
 
@@ -21,13 +21,13 @@
     \fontdimen4\font=1em% inter word shrink
 
     % \spaceskip=\fontdimen2\font plus \fontdimen3\font minus 3\fontdimen4\font
-    Nagy \[D]tűz, hatalmas \[F#m]láng, csak egy \[G]szikra az, amitől \[A]kigyullad. \echo{amitől \[A7]kigyullad}
+    Nagy \[D]tűz, hatalmas \[F#m]láng, csak egy \[G]szikra az, amitől \[A]kigyullad. \echo{amitől \[A\⁷]kigyullad}
 
     % \fontdimen2\font=\origiwspc% (original) inter word space
     % \fontdimen3\font=\origiwstr% (original) inter word stretch
     \fontdimen4\font=\origiwshr% (original) inter word shrink
 
-    \[D]Melegét szórja \[F#m]rád, csak a \[G]kezed kell, hogy oda\[A]ny{\_{ú}}jtsad. \echo{hogy oda\[A7]ny{\_{ú}}jtsad}
+    \[D]Melegét szórja \[F#m]rád, csak a \[G]kezed kell, hogy oda\[A]ny{\_{ú}}jtsad. \echo{hogy oda\[A\⁷]ny{\_{ú}}jtsad}
   \endverse
 
   \beginchorus
