--- a/songs/aldalak-jo-uram.tex
+++ b/songs/aldalak-jo-uram.tex
@@ -5,8 +5,8 @@
 
   \beginverse*
     \[C]Ál\[G]dalak, jó U\[Am]ram, \[F]teljes \[G]szívem\[C]ből.
-    \[F]Hirdetem \[G]majd \[E7]csodás tette\[Am]id
-    És \[Dm]éne\[D]kelek \[G4]Ró\[G]lad.
+    \[F]Hirdetem \[G]majd \[E\⁷]csodás tette\[Am]id
+    És \[Dm]éne\[D]kelek \[G\⁴]Ró\[G]lad.
   \endverse
 
   \beginverse*
