--- a/songs/aldasoddal-megyunk.tex
+++ b/songs/aldasoddal-megyunk.tex
@@ -10,7 +10,7 @@
 
   \beginchorus
     \[F#m]Te vagy mindig \[G]velünk, \[F#m]ha útra \[G]kelünk,
-    \[F#m]Őrizd éle\[G]tünk minden \[A]nap! \[A7]
+    \[F#m]Őrizd éle\[G]tünk minden \[A]nap! \[A\⁷]
   \endchorus
 
   \beginverse
@@ -20,7 +20,7 @@
 
   \beginchorus
     \[F#m]Maradj mindig \[G]velünk, \[F#m]ha útra \[G]kelünk,
-    \[F#m]Őrizd éle\[G]tünk minden \[A]nap! \[A7]
+    \[F#m]Őrizd éle\[G]tünk minden \[A]nap! \[A\⁷]
   \endchorus
 
   \beginverse*
