--- a/songs/aldjad-en-lelkem-az-urat.tex
+++ b/songs/aldjad-en-lelkem-az-urat.tex
@@ -11,8 +11,8 @@
 
   \beginverse\memorize
     \[Am]Áldjad, én \[Em]lelkem, az U\[Am]rat! \[Em]
-    \[Am]Áld\[Em]jad, én \[C]lelkem, \[D7]az U\[E]rat! \echo{Alle\[E7]luj{\_{a}}}
-    \[Am]Áldjad, én \[Em]{l\_{e}}lkem, \[F]áldjad, én \[G6]{l\_{e}}l\[C]kem,
+    \[Am]Áld\[Em]jad, én \[C]lelkem, \[D\⁷]az U\[E]rat! \echo{Alle\[E\⁷]luj{\_{a}}}
+    \[Am]Áldjad, én \[Em]{l\_{e}}lkem, \[F]áldjad, én \[G\⁶]{l\_{e}}l\[C]kem,
     \[Am]Áldjad, én \[Em]lelkem, az U\[Am]rat! \[Em] \[Am] \[Em]
   \endverse
 
