--- a/songs/alleluja.tex
+++ b/songs/alleluja.tex
@@ -6,22 +6,22 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[D] \[F#m] \[G] \[D] \[G] \[D] \[A7] \[D]}
+      {\nolyrics Előjáték: \[D] \[F#m] \[G] \[D] \[G] \[D] \[A\⁷] \[D]}
     \endverse
   \fi
 
   \beginchorus
     \[D]Allelu\[F#m]ja, alle\[G]lu – allelu\[D]ja,
-    \[G]Allelu\[D]ja, alle\[A]lu\[A7]ja.
+    \[G]Allelu\[D]ja, alle\[A]lu\[A\⁷]ja.
     \[D]Allelu\[F#m]ja, alle\[G]lu – allelu\[D]ja,
-    \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja!
+    \[G]Allelu\[D]ja, alle\[A]l\[A\⁷]u\[D]ja!
   \endchorus
 
   \beginverse\memorize
     \[D]Krisztus az \[F#m]Úr, erő s \[G]hatalom Ö\[D]vé,
-    \[G]Bátran bízz \[D]Benne, hisz’ \[A]mond\[A7]ta:
+    \[G]Bátran bízz \[D]Benne, hisz’ \[A]mond\[A\⁷]ta:
     ``Ki \[D]újra ko\[F#m]pog, annak \[G]ajtót nyitnak \[D]majd.''
-    \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja!
+    \[G]Allelu\[D]ja, alle\[A]l\[A\⁷]u\[D]ja!
   \endverse
 
   \refrain
