--- a/songs/antioch-dal.tex
+++ b/songs/antioch-dal.tex
@@ -3,7 +3,7 @@
   \beginverse
     \[G]Gyere, gyere, gyere és tapsoljál velünk! \echo{pop subap, pop pop subap}
     \[C]Gyere, gyere, gyere és tapsoljál velü\[G]nk! \echo{pop subap, pop pop subap}
-    \[D]Gyere, gyere, gyere és énekelj, hogy \[C]jól szóljon \[C7] a dalunk:
+    \[D]Gyere, gyere, gyere és énekelj, hogy \[C]jól szóljon \[C\⁷] a dalunk:
   \endverse
 
   \beginchorus
