--- a/songs/apokrif-ima.tex
+++ b/songs/apokrif-ima.tex
@@ -6,15 +6,15 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[D] \[D#dim] \[Em] \[A6] \[A7]}
+      {\nolyrics Előjáték: \[D] \[D#\ᵈⁱᵐ] \[Em] \[A\⁶] \[A\⁷]}
     \endverse
   \fi
 
   \beginverse\memorize
-    \[D]Oldani, Uram, \[D#dim] s oldódni \[A]v{\_{á}}gyom,
-    \[A7]Üdvözíteni, és üdvözülni \[D]v{\_{á}}gyom,
-    \[G] Alkotni, \[D]Uram, \[A7] s alakulni \[D]vágyom,
-    \[Em] Alkotni, \[A6]Uram, \[A7] s alakulni \[D]vágyom.
+    \[D]Oldani, Uram, \[D#\ᵈⁱᵐ] s oldódni \[A]v{\_{á}}gyom,
+    \[A\⁷]Üdvözíteni, és üdvözülni \[D]v{\_{á}}gyom,
+    \[G] Alkotni, \[D]Uram, \[A\⁷] s alakulni \[D]vágyom,
+    \[Em] Alkotni, \[A\⁶]Uram, \[A\⁷] s alakulni \[D]vágyom.
   \endverse
 
   \beginverse
@@ -33,7 +33,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Utójáték: \[D#dim] \[Em] \[A6] \[A7] \[D]}
+      {\nolyrics Utójáték: \[D#\ᵈⁱᵐ] \[Em] \[A\⁶] \[A\⁷] \[D]}
     \endverse
   \fi
 
