--- a/songs/aroni-aldas.tex
+++ b/songs/aroni-aldas.tex
@@ -12,13 +12,13 @@
   \beginverse*\memorize
     \[C]Áldjon m\_{e}g \[Em]téged az {\[Dm G]{\_{Ú}}}r!
     \[C]Áldjon m\_{e}g \[Em]téged az {\[Dm G]{\_{Ú}}}r!
-    És \[C]őrizzen \[G]meg tége\[C]det! \[C7]
+    És \[C]őrizzen \[G]meg tége\[C]det! \[C\⁷]
   \endverse
 
   \beginverse*
     /: \[Dm]Világo\[Em]sítsa meg az \[C]{\_{Ú}}r
     Az \[Dm]Ő or\[Em]cáját te\[C]rajtad,
-    És \[F]könyörüljön teraj\[G]tad! \[G7]
+    És \[F]könyörüljön teraj\[G]tad! \[G\⁷]
     \[C]Fordítsa az \[Em]Úr az Ő \[Dm]orcáját \[G]rád!
     \[C]Fordítsa az \[Em]Úr az Ő \[Dm]orcáját \[G]rád!
     És \[C]adjon bé\[G]két tené\[C]ked! :/ \rep{2} \echo{És \[C]adjon bé\[G]két tené\[C]ked!}
