--- a/songs/atya-aldott-legyel.tex
+++ b/songs/atya-aldott-legyel.tex
@@ -12,7 +12,7 @@
 
   \beginverse\memorize
     \[Em]Jó Aty\[C]ánk, örök \[D]Alkotónk, \[C]legyen meg az \[D]akara\[G]tod!
-    Amint a \[Em]mennyben a te \[Am]szentje\[D]id, \[H7]dicsérünk \[Em]Téged itt a \[Am]földön \[D]is.
+    Amint a \[Em]mennyben a te \[Am]szentje\[D]id, \[H\⁷]dicsérünk \[Em]Téged itt a \[Am]földön \[D]is.
   \endverse
 
   \refrain
