--- a/songs/atya-teremto-szeretet-lelke.tex
+++ b/songs/atya-teremto-szeretet-lelke.tex
@@ -4,15 +4,15 @@
 ]
 
   \beginverse\memorize
-    \[F]Atya, Teremtő \[A#]szeretet Lelke, \[Am] áradj \[C7]szét!
-    \[F]Fiú, Megváltó \[A#]szeretet Lelke, \[Am] áradj \[C7]szét!
-    \[F]Egyházvezető \[A#]szeretet Lelke, \[Am] áradj \[C7]szét!
-    \[F]Szentség pecsétje, \[A#]szeretet Lelke, \[C7] áradj \[F]szét!
+    \[F]Atya, Teremtő \[A#]szeretet Lelke, \[Am] áradj \[C\⁷]szét!
+    \[F]Fiú, Megváltó \[A#]szeretet Lelke, \[Am] áradj \[C\⁷]szét!
+    \[F]Egyházvezető \[A#]szeretet Lelke, \[Am] áradj \[C\⁷]szét!
+    \[F]Szentség pecsétje, \[A#]szeretet Lelke, \[C\⁷] áradj \[F]szét!
   \endverse
 
   \beginchorus
-    \[F]Áradj \[Am]szét, Lélek, \[A#] áradj \[C7]szét!
-    \[F]Áradj \[Am]szét, s töltsd be \[A#]minden \[C7]hívő szí\[F]vét!
+    \[F]Áradj \[Am]szét, Lélek, \[A#] áradj \[C\⁷]szét!
+    \[F]Áradj \[Am]szét, s töltsd be \[A#]minden \[C\⁷]hívő szí\[F]vét!
   \endchorus
 
   \beginverse
