--- a/songs/atyam-ket-kezedben.tex
+++ b/songs/atyam-ket-kezedben.tex
@@ -1,14 +1,14 @@
 \beginsong{Atyám, két kezedben}[]
 
   \beginverse
-    \[Dm]Atyám, két ke\[C]zedben, \[A7]csak ott lakha\[Dm]tom,
+    \[Dm]Atyám, két ke\[C]zedben, \[A\⁷]csak ott lakha\[Dm]tom,
     \[F]Biztonságot \[C]csak Tőled ka\[Dm]pok. \[G]
-    \[Dm]Újjá így te\[C]remtesz, \[A7]sebem ápo\[Dm]lod,
+    \[Dm]Újjá így te\[C]remtesz, \[A\⁷]sebem ápo\[Dm]lod,
     \[F]Boldogság, hogy \[C]itt van ottho\[Dm]nom. \[G]
   \endverse
 
   \beginchorus
-    /: \[F]Tarts meg két ke\[C]zedben, \[A7]őrizz meg, U\[Dm]ram,
+    /: \[F]Tarts meg két ke\[C]zedben, \[A\⁷]őrizz meg, U\[Dm]ram,
     \[F]Oltalmadban \[C]rejtsd el sorso\[Dm]mat! \[G] :/ \rep{2}
   \endchorus
 
