--- a/songs/atyam-tied-vagyok.tex
+++ b/songs/atyam-tied-vagyok.tex
@@ -5,7 +5,7 @@
 
   \beginverse\memorize
     \[C]Atyám, Tied \[F]vagyok, és \[G]szüntelen i\[C]mádlak!
-    \[C]Dicsőség \[F]szent neved\[G4]nek! \[G7]
+    \[C]Dicsőség \[F]szent neved\[G\⁴]nek! \[G\⁷]
   \endverse
 
   \beginchorus
