--- a/songs/baranyom-baranyom.tex
+++ b/songs/baranyom-baranyom.tex
@@ -19,7 +19,7 @@
   \beginchorus
     Én U\[Em]ram, add meg nekem,
     Jó U\[Am]ram, add meg nekem,
-    \[D]Hadd legyen Mel\[D7]letted majd a \[G]helyem!
+    \[D]Hadd legyen Mel\[D\⁷]letted majd a \[G]helyem!
     Lesem \[Em]minden vágyadat, tiszte\[Am]lem házadat.
     Én U\[F#]ram, jó Uram, add meg ne\[Am]k\[D]{\_{e}}m!
   \endchorus
