--- a/songs/beke-istene.tex
+++ b/songs/beke-istene.tex
@@ -4,8 +4,8 @@
 ]
 
   \beginverse
-    \[Em]Béke \[C]Istene \[G]szállj \[D]ránk, \[Am]jöjj el, \[C]Mennyei \[H7]Bárány!
-    \[Em]Szíved \[C]várja a \[G]szí\[D]vem, \[C]Jézus, \[H7]légy mene\[Em]dékem!
+    \[Em]Béke \[C]Istene \[G]szállj \[D]ránk, \[Am]jöjj el, \[C]Mennyei \[H\⁷]Bárány!
+    \[Em]Szíved \[C]várja a \[G]szí\[D]vem, \[C]Jézus, \[H\⁷]légy mene\[Em]dékem!
   \endverse
 
 \endsong
