--- a/songs/bizom-benned.tex
+++ b/songs/bizom-benned.tex
@@ -5,20 +5,20 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[G] \[C9] \[Em7] \[D]}
+      {\nolyrics Előjáték: \[G] \[C\⁹] \[Em\⁷] \[D]}
     \endverse
   \fi
 
   \beginchorus
-    \[G]Bízom \[C9]Benned, \[Em7]igazságos \[D]Úr vagy,
-    \[G]Bízom \[C9]Benned, \[Em7]irgalmas, \[D]j{\_{ó}}!
-    \[G]Bízom \[C9]Benned \[Em7]mind{\_{e}}n\[D]nap, örö\[G]kké! \[C9] \[Em7] \[D]
+    \[G]Bízom \[C\⁹]Benned, \[Em\⁷]igazságos \[D]Úr vagy,
+    \[G]Bízom \[C\⁹]Benned, \[Em\⁷]irgalmas, \[D]j{\_{ó}}!
+    \[G]Bízom \[C\⁹]Benned \[Em\⁷]mind{\_{e}}n\[D]nap, örö\[G]kké! \[C\⁹] \[Em\⁷] \[D]
   \endchorus
 
   \beginverse\memorize
-    \[G] Olyan messziről jöttem \[Am7]én,
+    \[G] Olyan messziről jöttem \[Am\⁷]én,
     És Te \[F]megvár\[C]tál, sokat \[G] vártál \[D]r{\_{á}}m,
-    \[G] Úgy hívlak a magány éjje\[Am7]lén,
+    \[G] Úgy hívlak a magány éjje\[Am\⁷]lén,
     Mikor \[F]elvész a \[C]szó, mikor csak \[G]átölelni \[D]jó!
     \[Am]Tudom, hogy \[Em]távol voltam, \[G]fájt Ne\[D]ked.
     \[Am]Tudom, hogy \[Em]Nélküled \[C]nem élhe\[D]t{\_{e}}k.
