--- a/songs/boldogsag-orom.tex
+++ b/songs/boldogsag-orom.tex
@@ -6,7 +6,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: /: \[G] \[Am] \[D-D7] \[G!] \[D7!] :/ \rep{2}}
+      {\nolyrics Előjáték: /: \[G] \[Am] \[D-D\⁷] \[G!] \[D\⁷!] :/ \rep{2}}
     \endverse
   \fi
 
@@ -14,16 +14,16 @@
     Ha \[G]valaki látja az \[Am]arcomat,
     Ha \[D]valaki hallja a \[G]hangomat,
     \[E]Megtudja-e rólam, hogy \[Am]Jézus él,
-    És \[D]boldog-e az \[D7]ember, ha \[G]szeretetben él?
+    És \[D]boldog-e az \[D\⁷]ember, ha \[G]szeretetben él?
   \endverse
 
   \beginchorus
     \[G]Boldogság, öröm az élete\[Am]m,
-    \[D]Akárhová \[D7]megyek, kell, hogy vi\[G]gyem.
+    \[D]Akárhová \[D\⁷]megyek, kell, hogy vi\[G]gyem.
     \[E]Örömöm Jézus adta ne\[Am]kem,
-    Hogy \[D]ne csak az e\[D7]nyém, de \[D#7]mindenkié \[D7]legye\[G]n! \[G] \[F#] \[F]
+    Hogy \[D]ne csak az e\[D\⁷]nyém, de \[D#\⁷]mindenkié \[D\⁷]legye\[G]n! \[G] \[F#] \[F]
     \[E]Örömöm Jézus adta ne\[Am]kem,
-    Hogy \[D]ne csak az e\[D7]nyém, de \[D#7]mindenkié \[D7]legye\[G]n!
+    Hogy \[D]ne csak az e\[D\⁷]nyém, de \[D#\⁷]mindenkié \[D\⁷]legye\[G]n!
   \endchorus
 
   \beginverse
