--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -27,7 +27,7 @@
   \endchorus
 
   \beginverse*
-    {\nolyrics (Két félhang emelkedés.) \[A7]}
+    {\nolyrics (Két félhang emelkedés.) \[A\⁷]}
   \endverse
 
 %   \textnote{Két félhang emelkedés.}
