--- a/songs/egyutt-fog-ujjongni.tex
+++ b/songs/egyutt-fog-ujjongni.tex
@@ -4,23 +4,23 @@
 ]
 
   \beginverse*
-    \[H7]Együtt fog ujjongni \[Em]fiatal és öreg is
-    És \[Am]örömében táncot lejt a \[H7]l{\_{á}}ny.
+    \[H\⁷]Együtt fog ujjongni \[Em]fiatal és öreg is
+    És \[Am]örömében táncot lejt a \[H\⁷]l{\_{á}}ny.
   \endverse
 
   \beginverse*
-    % {\nolyrics  \[H7] \[Em] \[Am] \[H7]}
+    % {\nolyrics  \[H\⁷] \[Em] \[Am] \[H\⁷]}
 
-    \[H7]La, la la la, la la \[Em]la, la-la-la la la la
-    La \[Am]la la la la, la la la la, \[H7]la la la la
+    \[H\⁷]La, la la la, la la \[Em]la, la-la-la la la la
+    La \[Am]la la la la, la la la la, \[H\⁷]la la la la
   \endverse
 
   \beginverse*
-    \[H7]Gyászukat ünnepre fordítom, s nem búsulnak ezután!
+    \[H\⁷]Gyászukat ünnepre fordítom, s nem búsulnak ezután!
     Vi\[Am]dámmá te\[D]szem a szívü\[G]ket,
-    Hogy \[Em]örvendezze\[Am]nek a \[H7]bánatuk he\[Em]ly{\_{e}}tt!
+    Hogy \[Em]örvendezze\[Am]nek a \[H\⁷]bánatuk he\[Em]ly{\_{e}}tt!
     Vi\[Am]dámmá te\[D]szem a szívü\[G]ket,
-    Hogy \[Em]örvendezze\[Am]nek a \[H7]bánatuk he\[Em]lyett!
+    Hogy \[Em]örvendezze\[Am]nek a \[H\⁷]bánatuk he\[Em]lyett!
   \endverse
 
 \endsong
