--- a/songs/elhetunk.tex
+++ b/songs/elhetunk.tex
@@ -17,7 +17,7 @@
     \[Em]Elcsüggesztett, rabbá tett az \[D]aggodalom,
     \[Hm]De a szívünk szorongása \[A]a Te erődben
     \[G]Összetört és \[A]messzetűnt,
-    \[G]És az öröm, melyet adtál, \[A]kiárad a \[A4]Földre!
+    \[G]És az öröm, melyet adtál, \[A]kiárad a \[A\⁴]Földre!
   \endverse
 
   \refrain
