--- a/songs/en-uram-en-istenem.tex
+++ b/songs/en-uram-en-istenem.tex
@@ -6,14 +6,14 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Em] \[H7] \[G] \[D] \[C] \[H7] \[G] \[D] \[Em]}
+      {\nolyrics Előjáték: \[Em] \[H\⁷] \[G] \[D] \[C] \[H\⁷] \[G] \[D] \[Em]}
     \endverse
   \fi
 
   \beginverse\memorize
-    \[Em]Én Uram, én \[H7]Istenem,
+    \[Em]Én Uram, én \[H\⁷]Istenem,
     \[G]Vedd el tőlem \[D]mindenem,
-    Ami \[Am]gátol \[Am7] Fe\[Em]léd!
+    Ami \[Am]gátol \[Am\⁷] Fe\[Em]léd!
   \endverse
 
   \beginverse
@@ -23,15 +23,15 @@
   \endverse
 
   \beginverse
-    \[Em]Én Uram, én \[H7]Istenem,
+    \[Em]Én Uram, én \[H\⁷]Istenem,
     \[G]Fogadd el az \[D]életem,
     \[C]Hadd legyen e\[D]gészen a Ti\[Em]éd!
   \endverse
 
   \beginverse
-    \[Em]Én Uram, én \[H7]Istenem,
+    \[Em]Én Uram, én \[H\⁷]Istenem,
     \[G]Fogadd el az \[D]életem,
-    \[C]Hadd legyen e\[D]gészen a Ti{\[G H]{\_{é}}}d! \[Em] \[H7]
+    \[C]Hadd legyen e\[D]gészen a Ti{\[G H]{\_{é}}}d! \[Em] \[H\⁷]
   \endverse
 
   \ifchorded
