--- a/songs/feny-ami-bennem-eg.tex
+++ b/songs/feny-ami-bennem-eg.tex
@@ -3,7 +3,7 @@
   \beginverse\memorize
     A \[G]fény, ami bennem ég, nem fog már kihunyni,
     A \[C]fényt, ami bennem ég, \[G]égni hagyom már. \echo{Hej babám!}
-    A fény, ami bennem ég, \[H7]sugározzon \[Em]szét,
+    A fény, ami bennem ég, \[H\⁷]sugározzon \[Em]szét,
     Legyen \[G]fény, legyen \[D]fény, legyen \[G]fény! \[C] \[G] \[D]
   \endverse
 
