--- a/songs/foltamadt-alleluja.tex
+++ b/songs/foltamadt-alleluja.tex
@@ -7,23 +7,23 @@
 
   % \ifchorded
   %   \beginverse*
-  %     {\nolyrics Előjáték: \[E] \[A] \[A7]}
+  %     {\nolyrics Előjáték: \[E] \[A] \[A\⁷]}
   %   \endverse
   % \fi
 
   \beginverse\memorize
-    \[D]Álltok \[A7]sz{\_{ó}}tla\[D]nul, a \[G]dárda \[A]földre \[D]hull, \[Hm]
+    \[D]Álltok \[A\⁷]sz{\_{ó}}tla\[D]nul, a \[G]dárda \[A]földre \[D]hull, \[Hm]
     Itt \[G]más e\[A]rő az {\[D Hm]{\_{Ú}}}r, itt \[Em]más e\[A]r{\_{ő}} az \[D]Úr!
   \endverse
 
   \beginverse
     Az ^éj az ^hosszú ^volt, de ^eltűnt ^már a ^Hold, ^
-    A ^hajnal {^felsik}{^{\_{o}}}lt, a ^hajnal ^f{\_{e}}lsi^kolt: \[D7]
+    A ^hajnal {^felsik}{^{\_{o}}}lt, a ^hajnal ^f{\_{e}}lsi^kolt: \[D\⁷]
   \endverse
 
   \beginchorus
-    \[G]Föltá\[A]madt! Allel{\[D Hm]{\_{u}}}ja! \[Em]Föltámadt! \[A7]Allel\_{u}\[D]ja! \[Hm]
-    \[G]Föltá\[A]madt! Allel{\[D Hm]{\_{u}}}ja! \[Em]Föltámadt! \[A7]Allel\_{u}\[D]ja!
+    \[G]Föltá\[A]madt! Allel{\[D Hm]{\_{u}}}ja! \[Em]Föltámadt! \[A\⁷]Allel\_{u}\[D]ja! \[Hm]
+    \[G]Föltá\[A]madt! Allel{\[D Hm]{\_{u}}}ja! \[Em]Föltámadt! \[A\⁷]Allel\_{u}\[D]ja!
   \endchorus
 
   \beginverse
@@ -33,14 +33,14 @@
 
   \beginverse
     ^Virágban ^{\_{á}}ll a ^rét, a ^virágos ^úton ^át ^
-    ^Valaki ^jön fel{^{\_{é}}}d, ^Valaki ^j{\_{ö}}n fe^léd. \[D7]
+    ^Valaki ^jön fel{^{\_{é}}}d, ^Valaki ^j{\_{ö}}n fe^léd. \[D\⁷]
   \endverse
 
   \refrain
 
   \beginverse
     ^Virágban ^{\_{á}}ll a ^rét, a ^virágos ^úton ^át ^
-    ^Jézus ^jön fel{^{\_{é}}}d, ^Jézus ^j{\_{ö}}n fe^léd. \[D7]
+    ^Jézus ^jön fel{^{\_{é}}}d, ^Jézus ^j{\_{ö}}n fe^léd. \[D\⁷]
   \endverse
 
   \refrain[2]
