--- a/songs/gyertek-dicserjuk-egyutt.tex
+++ b/songs/gyertek-dicserjuk-egyutt.tex
@@ -2,12 +2,12 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[E] \[E7] \[F] \[E] \[F] \[E]}
+      {\nolyrics Előjáték: \[E] \[E\⁷] \[F] \[E] \[F] \[E]}
     \endverse
   \fi
 
   \beginverse*\memorize
-    /: \[E]Gyertek, dicsérjük \[E7]együtt Izrael \[F]Szentjét,
+    /: \[E]Gyertek, dicsérjük \[E\⁷]együtt Izrael \[F]Szentjét,
     Mert Ő a \[E]Meg\[Dm]vál\[E]tó! :/ \rep{2}
   \endverse
 
@@ -19,7 +19,7 @@
   \beginverse*
     \[Am]Gyertek, gyertek, menjünk fel az Úr hegyére, vigasságnak lakhelyére,
     \[Dm]Ujjongjunk Őelőtte, táncoljunk Őelőtte,
-    Az \[E]Ő neve, az Ő neve: \[E7]Ott lakik az \[Am]Úr!
+    Az \[E]Ő neve, az Ő neve: \[E\⁷]Ott lakik az \[Am]Úr!
   \endverse
 
 \endsong
