--- a/songs/ha-jon-az-ur.tex
+++ b/songs/ha-jon-az-ur.tex
@@ -2,13 +2,13 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[E] \[E7] \[A] \[Am] \[E] \[H7] \[E] \[A] \[E]}
+      {\nolyrics Előjáték: \[E] \[E\⁷] \[A] \[Am] \[E] \[H\⁷] \[E] \[A] \[E]}
     \endverse
   \fi
 
   \beginverse\memorize
-    Ha jön az \[E]Úr, ha visszatér, ha jön az Úr, ha vissza\[H7]tér,
-    Hívj, A\[E]tyám, a \[E7]szentek \[A]közé, \[Am] ha jön az \[E]Úr, ha \[H7]vissza\[E]tér! \[A] \[E!]
+    Ha jön az \[E]Úr, ha visszatér, ha jön az Úr, ha vissza\[H\⁷]tér,
+    Hívj, A\[E]tyám, a \[E\⁷]szentek \[A]közé, \[Am] ha jön az \[E]Úr, ha \[H\⁷]vissza\[E]tér! \[A] \[E!]
   \endverse
 
   \beginverse
