--- a/songs/halat-adok-az-esti-oran.tex
+++ b/songs/halat-adok-az-esti-oran.tex
@@ -7,10 +7,10 @@
   % / jelek után: https://www.youtube.com/watch?v=ggrTwNKP5Ew
 
   \beginverse\memorize
-    \[D]Hálá\[Hm]t adok az \[Em]esti \[A6]órán,
-    \[D]Hálá\[D7]t adok, hogy \[G]itt az \[A7]éj,
-    \[D]Hálá\[D7]t adok, hogy \[G]szívem \[Gm]mélyén
-    \[D]Hála \[A7]dala \[D]kél.
+    \[D]Hálá\[Hm]t adok az \[Em]esti \[A\⁶]órán,
+    \[D]Hálá\[D\⁷]t adok, hogy \[G]itt az \[A\⁷]éj,
+    \[D]Hálá\[D\⁷]t adok, hogy \[G]szívem \[Gm]mélyén
+    \[D]Hála \[A\⁷]dala \[D]kél.
   \endverse
 
   \beginverse
