--- a/songs/halat-adok-hogy-itt-a-reggel.tex
+++ b/songs/halat-adok-hogy-itt-a-reggel.tex
@@ -5,10 +5,10 @@
 ]
 
   \beginverse\memorize
-    \[D]Hálá\[Hm]t adok, hogy \[Em]itt a \[A6]reggel,
-    \[D]Hálá\[D7]t adok az \[G]új na\[A7]pon.
-    \[D]Hálá\[D7]t adok, hogy \[G]minden \[Gm]percem
-    \[D]Néked \[A7]adha\[D]tom.
+    \[D]Hálá\[Hm]t adok, hogy \[Em]itt a \[A\⁶]reggel,
+    \[D]Hálá\[D\⁷]t adok az \[G]új na\[A\⁷]pon.
+    \[D]Hálá\[D\⁷]t adok, hogy \[G]minden \[Gm]percem
+    \[D]Néked \[A\⁷]adha\[D]tom.
   \endverse
 
   \beginverse
