--- a/songs/halovetok.tex
+++ b/songs/halovetok.tex
@@ -8,8 +8,8 @@
     E\[D]vezz, én a hálót vete\[Hm]m, a jobboldalá\[A]n!
     \[G]Szólt, így szólt az Ú\[Hm]r
     -- Pedig már \[G]feladtuk, jó lesz az ú\[Hm]gy --
-           %TODO
-    Hogy: ``\[D/A]Menj, munkára fe\[A]l, csónakba há\[Gsus2]t!''.
+           % TODO:
+    Hogy: ``\[D/A]Menj, munkára fe\[A]l, csónakba há\[G\ˢᵘˢ\²]t!''.
   \endverse
 
   \beginverse
@@ -17,7 +17,7 @@
     ^Fáj, ha talpadba vá^g, szétmegy saru^d!
     Az ^út végén keresztfa á^ll,
     Sok ^kanyargó mérföld utá^n,
-    De a ^sziklák között is talál^sz pár jó illatú\[Gsus4]t! \[G]
+    De a ^sziklák között is talál^sz pár jó illatú\[G\ˢᵘˢ\⁴]t! \[G]
   \endverse
 
   \beginchorus
@@ -26,7 +26,7 @@
     Mi \[D]szobrászok nem vagyu\[A]nk, csak kavicsszedő\[G]k.
     \[D]Szavában csak bízni ke\[A]ll,
     S hálónkba \[Hm]bőséges zsákmányt tere\[G]l,
-    \[D]Mások közt így leszü\[A]nk hálóvet\[Gadd2]ők.
+    \[D]Mások közt így leszü\[A]nk hálóvet\[G\ᵃᵈᵈ\²]ők.
   \endchorus
 
   \beginverse
@@ -34,7 +34,7 @@
     ^Edzz, edzd meg karo^d, hogy biztos legye^n!
     ^Kell, hogy jobban szorít^sd,
     Hogy ^mindig javulj és javí^ts!
-    Hogy ^még jobban fogjon, mint ^mikor mi akadtu\[Gsus4]nk fenn. \[G]
+    Hogy ^még jobban fogjon, mint ^mikor mi akadtu\[G\ˢᵘˢ\⁴]nk fenn. \[G]
   \endverse
 
   \refrain
