--- a/songs/hazamegy-a-vandor.tex
+++ b/songs/hazamegy-a-vandor.tex
@@ -12,7 +12,7 @@
 
   \beginchorus
     Hazamegy a \[H]vándor, erről álmodott ő \[G#m] százszor.
-    Arra tette fel az \[E]életét, hogy egy \[G#m]szép napon majd \[F#sus4]célba \_{é}r. \[F#]
+    Arra tette fel az \[E]életét, hogy egy \[G#m]szép napon majd \[F#\ˢᵘˢ\⁴]célba \_{é}r. \[F#]
     Hazamegy a \[H]vándor, eltűnik, mint a \[G#m] kámfor.
     Mintha soha nem lett \[E]volna itt, egy szempillantás és meg\[H]érkez\_{i}k. \[F#]
   \endchorus
