--- a/songs/hus-ver-templom.tex
+++ b/songs/hus-ver-templom.tex
@@ -13,15 +13,15 @@
   \beginchorus
     /: Nekem \[Dm]nincs más \[Gm]Rajtad \[C]kívül, \[F]Jézus,
     \[Dm]Éle\[Gm]tem for\[C]rása \[F]vagy.
-    \[Dm]Kézzel, \[Gm7]lábbal, \[A]szívvel, \[Dm]szájjal
-    \[A#]Dicsérlek, Ura\[A4]m. \[A] :/ \rep{2}
+    \[Dm]Kézzel, \[Gm\⁷]lábbal, \[A]szívvel, \[Dm]szájjal
+    \[A#]Dicsérlek, Ura\[A\⁴]m. \[A] :/ \rep{2}
   \endchorus
 
   \beginverse*
     Ez a \[Dm]hús-vér \[Gm]templom \[A]Érted \[Dm]épült,
-    Neked \[A#]ég a \[Gm7]tűz bent, \[A]oltárai\[Dm]nál.
+    Neked \[A#]ég a \[Gm\⁷]tűz bent, \[A]oltárai\[Dm]nál.
     Ez a hús-vér \[Gm]templom \[A]Téged \[Dm]dicsér,
-    Szívem \[A#]minden \[Gm7]húrja \[A]Rólad muzsi\[Dm]kál.
+    Szívem \[A#]minden \[Gm\⁷]húrja \[A]Rólad muzsi\[Dm]kál.
   \endverse
 
 \endsong
