--- a/songs/im-itt-jon-o.tex
+++ b/songs/im-itt-jon-o.tex
@@ -40,6 +40,6 @@
     Hisz ^itt a vőle^gény, ki minket ^úgy sze^ret!
   \endverse
 
-  \refrain{\echo{A \[Hm]kedve\[Em]sem, a \[Hm]ked\[Hm7]ve\[Em]sem.}}
+  \refrain{\echo{A \[Hm]kedve\[Em]sem, a \[Hm]ked\[Hm\⁷]ve\[Em]sem.}}
 
 \endsong
