--- a/songs/ime-az-isten-satora.tex
+++ b/songs/ime-az-isten-satora.tex
@@ -12,7 +12,7 @@
 
   \beginverse\memorize
     \[Em]Ímé, az \_{I}sten \[Hm]sátora az \[Em]emberekkel \[Hm]van,
-    \[Em]Maga az \_{I}sten \[D]lesz velük, az \[G]ő Iste\[H]nük. \[H7]
+    \[Em]Maga az \_{I}sten \[D]lesz velük, az \[G]ő Iste\[H]nük. \[H\⁷]
   \endverse
 
   \beginchorus
