--- a/songs/indulj-es-menj.tex
+++ b/songs/indulj-es-menj.tex
@@ -6,21 +6,21 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: /: \[C] \[D] \[Em] \[H7]} :/ \rep{2}
+      {\nolyrics Előjáték: /: \[C] \[D] \[Em] \[H\⁷]} :/ \rep{2}
     \endverse
   \fi
 
   \beginverse\memorize
     \[Em]Indulj és \[G]menj, \[D]hirdesd sza\[Em]vam,
-    \[C]Népemhez \[D]küldelek \[Em]én! \[H7]
+    \[C]Népemhez \[D]küldelek \[Em]én! \[H\⁷]
     \[Em]Tövis és \[G]gaz, \[D]vér és pa\[Em]nasz,
     \[C]Meddig hall\[D]gassam még \[Em]én?
   \endverse
 
   \beginchorus
-    \[G]Küldelek \[D]én, \[H7]megáldlak \[Em]én,
-    Csak \[C]menj és \[D]hirdesd sza\[Em]vam! \[H7]
-    \[G]Küldelek \[D]én, \[H7]megáldlak \[Em]én,
+    \[G]Küldelek \[D]én, \[H\⁷]megáldlak \[Em]én,
+    Csak \[C]menj és \[D]hirdesd sza\[Em]vam! \[H\⁷]
+    \[G]Küldelek \[D]én, \[H\⁷]megáldlak \[Em]én,
     Csak \[C]menj és \[D]hirdesd sza\[Em]vam!
   \endchorus
 
