--- a/songs/itt-vagyok-most-jo-uram.tex
+++ b/songs/itt-vagyok-most-jo-uram.tex
@@ -4,14 +4,14 @@
     \[D]Itt vagyok most, jó Uram, \[G]Hozzád száll e dal.
     \[D]Tudom, sokszor hívtalak, de ma \[G]másképp szól e hang,
     Mert ma \[Em]nem azt kérem, hogy \[A]adj még, nem kö\[D]nyörgök: figyelj r\[G]ám,
-    Csak \[D]azt mon\[Hm7]dom, hogy \[Em7]szeret\[A7]lek, Aty\[D]ám! \[D7]
+    Csak \[D]azt mon\[Hm\⁷]dom, hogy \[Em\⁷]szeret\[A\⁷]lek, Aty\[D]ám! \[D\⁷]
   \endverse
 
   \beginchorus
-    Szeret\[Em7]lek, ó, U\[A7]ram, hálám \[D]szívemből fak\[G]ad,
-    Hiszen \[Em7]mindent látsz Te ben\[A]nem, \[D]hatalmad olyan \[D7]nagy!
-    Szeret\[Em7]lek, ó, U\[A]ram, hálám \[D]szívemből fak\[G]ad,
-    És \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy, U\[D]ram!
+    Szeret\[Em\⁷]lek, ó, U\[A\⁷]ram, hálám \[D]szívemből fak\[G]ad,
+    Hiszen \[Em\⁷]mindent látsz Te ben\[A]nem, \[D]hatalmad olyan \[D\⁷]nagy!
+    Szeret\[Em\⁷]lek, ó, U\[A]ram, hálám \[D]szívemből fak\[G]ad,
+    És \[D]ének\[Hm\⁷]lem, hogy \[Em\⁷]áldott \[A\⁷]légy, U\[D]ram!
   \endchorus
 
   \beginverse
@@ -24,7 +24,7 @@
   \refrain
 
   \beginverse*
-    És \[D]ének\[Hm7]lem, hogy \[Em7]áldott \[A7]légy, U\[D]ram!
+    És \[D]ének\[Hm\⁷]lem, hogy \[Em\⁷]áldott \[A\⁷]légy, U\[D]ram!
   \endverse
 
 \endsong
