--- a/songs/jezus-nez-ram.tex
+++ b/songs/jezus-nez-ram.tex
@@ -7,20 +7,20 @@
     \beginverse*
       {\nolyrics
         Előjáték:
-        \[C] \[Dm] \[Am] \[E7] \[Dm] \[G7] \[C] \[G7]
-        \[C] \[Dm] \[Am] \[E7] \[Dm] \[G7] \[C]
+        \[C] \[Dm] \[Am] \[E\⁷] \[Dm] \[G\⁷] \[C] \[G\⁷]
+        \[C] \[Dm] \[Am] \[E\⁷] \[Dm] \[G\⁷] \[C]
       }
     \endverse
   \fi
 
   \beginverse*
-    \[C]Jézus \[Dm]néz rám a \[Am]két szemed\[E7]ből, arra \[Dm]kér, arra \[G7]vár, hogy megért\[C]sem, \[G7]
-    \[C]Jézus \[Dm]néz rám a \[Am]két szemed\[E7]ből, arra \[Dm]kér, arra \[G7]vár, hogy szeres\[C]sem.
+    \[C]Jézus \[Dm]néz rám a \[Am]két szemed\[E\⁷]ből, arra \[Dm]kér, arra \[G\⁷]vár, hogy megért\[C]sem, \[G\⁷]
+    \[C]Jézus \[Dm]néz rám a \[Am]két szemed\[E\⁷]ből, arra \[Dm]kér, arra \[G\⁷]vár, hogy szeres\[C]sem.
   \endverse
 
   \beginchorus
-    /: \[C]Jézus \[H7]arra \[E]kér, mert \[C]bennünk \[H7]emberekben \[E]él,
-    Hogy \[C]meglás\[C7]sam és \[F]szeressem, ha \[C]eljön hozzám \[G7]valaki\[C]ben. \[G$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{0.4cm}\fi:/ \rep{2}}
+    /: \[C]Jézus \[H\⁷]arra \[E]kér, mert \[C]bennünk \[H\⁷]emberekben \[E]él,
+    Hogy \[C]meglás\[C\⁷]sam és \[F]szeressem, ha \[C]eljön hozzám \[G\⁷]valaki\[C]ben. \[G$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{0.4cm}\fi:/ \rep{2}}
     % vagy inkább \quad ?
   \endchorus
 
