--- a/songs/jezus-var-terad.tex
+++ b/songs/jezus-var-terad.tex
@@ -10,7 +10,7 @@
 
   \beginverse\memorize
     \[Am]Jöjjetek Hoz\[D]zá, kik \[Hm]szomjazzátok \[C]Őt,
-    \[Am]Bensejéből \[C]élő víz forrása fak\[H7]ad!
+    \[Am]Bensejéből \[C]élő víz forrása fak\[H\⁷]ad!
   \endverse
 
   \refrain
