--- a/songs/jezus-vered-megtisztit.tex
+++ b/songs/jezus-vered-megtisztit.tex
@@ -13,9 +13,9 @@
 
   \beginverse*
     Jézus, \[C]véred \[G]megtisz\[Am]tít, véred \[F]ad új éle\[G]tet.
-    Véred \[F]tesz ma szabad\[G]dá, értem \[C]folyt e \[E7]drága \[Am]vér.
+    Véred \[F]tesz ma szabad\[G]dá, értem \[C]folyt e \[E\⁷]drága \[Am]vér.
     Így a \[F]lel\[Fm]kem fehér, mint a \[C]hó, \[G] mint a \[Am]hó.
-    Úr \[Dm]Jézus, Te \[G]megölt \[G7]Bá\[C]rány.
+    Úr \[Dm]Jézus, Te \[G]megölt \[G\⁷]Bá\[C]rány.
   \endverse
 
 \endsong
