--- a/songs/jojj-itt-az-ido.tex
+++ b/songs/jojj-itt-az-ido.tex
@@ -2,24 +2,24 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[D] \[D4] \[D] \[D4]}
+       {\nolyrics Előjáték: \[D] \[D\⁴] \[D] \[D\⁴]}
     \endverse
   \fi
 
   \beginverse\memorize
-    \[D]Jöjj, itt az idő, hogy \[D4]éb\[D]redj!
+    \[D]Jöjj, itt az idő, hogy \[D\⁴]éb\[D]redj!
     \[A]Jöjj, itt az idő, hogy \[Em]áld\[F#m]juk \[G]Őt!
-    \[D]Jöjj, szívedet add az \[D4]Úr\[D]nak!
+    \[D]Jöjj, szívedet add az \[D\⁴]Úr\[D]nak!
     \[A]Jöjj, imádd az Istent \[Em]úgy, \[F#m]ahogy \[G]vagy!
   \endverse
 
   \beginverse*
-    Hát \[D]jö\[D2 D4 D]jj!
+    Hát \[D]jö\[D\² D\⁴ D]jj!
   \endverse
 
   \beginchorus
     /: \[G]Minden nyelv megv\_{a}llja, hogy \[D]Ő az Úr! \[G]És mindenki t\_{é}rdet \[D]hajt!
-    De a \[G]legnagyobb kincs mégis \[Hm]azokra vár, kik \[Em]most Őt válasz\[A4]tják! \[A] :/ \rep{2}
+    De a \[G]legnagyobb kincs mégis \[Hm]azokra vár, kik \[Em]most Őt válasz\[A\⁴]tják! \[A] :/ \rep{2}
   \endchorus
 
   \beginverse*
