--- a/songs/kicsiny-kis-fenyemmel.tex
+++ b/songs/kicsiny-kis-fenyemmel.tex
@@ -3,8 +3,8 @@
   \beginverse\memorize
     \[G]Kicsiny kis fényemmel világítani fogok.
     \[C]Kicsiny kis fényemmel világítani fo\[G]gok.
-    Kicsiny kis fényemmel \[H7]világítani fo\[Em]gok.
-    Áldom \[D]Őt minden \[D7]nap és minden\[G]hol. \[C] \[G]
+    Kicsiny kis fényemmel \[H\⁷]világítani fo\[Em]gok.
+    Áldom \[D]Őt minden \[D\⁷]nap és minden\[G]hol. \[C] \[G]
   \endverse
 
   \beginverse
