--- a/songs/krisztus-el-bennem.tex
+++ b/songs/krisztus-el-bennem.tex
@@ -26,7 +26,7 @@
   \beginverse\memorize
     Az \[Em]Örömhír fénye \[C]ragyogjon éle\[D]tedben!
     A \[G]szeretet tüze \[Am]égjen a szíved\[D]ben!
-    Hogy \[Hm]lássa meg a vi\[Em]lág, te is \[C]mondd velünk, \[Am]éld meg és add to\[D]vább! \[D4] \[D]
+    Hogy \[Hm]lássa meg a vi\[Em]lág, te is \[C]mondd velünk, \[Am]éld meg és add to\[D]vább! \[D\⁴] \[D]
   \endverse
 
   \refrain
