--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -12,7 +12,7 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[F] \[C7] \[F] \[Gm] \[Am] \[A#] \[F] \[C] \[A#] \[F]}
+       {\nolyrics Előjáték: \[F] \[C\⁷] \[F] \[Gm] \[Am] \[A#] \[F] \[C] \[A#] \[F]}
     \endverse
   \fi
 
