--- a/songs/loyolai-szent-ignac-imaja.tex
+++ b/songs/loyolai-szent-ignac-imaja.tex
@@ -6,7 +6,7 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[C] \[G] \[Am] \[F] \[C] \[G] \[C] \[G7]}
+       {\nolyrics Előjáték: \[C] \[G] \[Am] \[F] \[C] \[G] \[C] \[G\⁷]}
     \endverse
   \fi
 
@@ -21,8 +21,8 @@
   \endverse
 
   \beginchorus
-    \[Am]Legyen \[E7]fölöttük \[Am]korlátlan \[F]úr \[C]rendel\[G]kezé\[C]sed!
-    Csak \[Am]egyet \[E7]h{\_{a}}gyj meg \[Am]ajándéko\[D7]dul: \[G]szeretnem \[F]T{\_{é}}\[Em]ged! \[G7]
+    \[Am]Legyen \[E\⁷]fölöttük \[Am]korlátlan \[F]úr \[C]rendel\[G]kezé\[C]sed!
+    Csak \[Am]egyet \[E\⁷]h{\_{a}}gyj meg \[Am]ajándéko\[D\⁷]dul: \[G]szeretnem \[F]T{\_{é}}\[Em]ged! \[G\⁷]
   \endchorus
 
   \beginverse
