--- a/songs/melybol-hozzad-szall-szavam.tex
+++ b/songs/melybol-hozzad-szall-szavam.tex
@@ -14,15 +14,15 @@
   \fi
 
   \beginverse\memorize
-    A \[Em]mélyből \[H7]Hozzád \[Em]száll sza\[Am]vam, \[G]Uram, \[H7]irgal\[Em]mazz!
-    A \[Em]bajban \[H7]lelkem \[Em]társta\[Am]lan, \[G]Uram, \[H7]irgal\[Em]mazz!
+    A \[Em]mélyből \[H\⁷]Hozzád \[Em]száll sza\[Am]vam, \[G]Uram, \[H\⁷]irgal\[Em]mazz!
+    A \[Em]bajban \[H\⁷]lelkem \[Em]társta\[Am]lan, \[G]Uram, \[H\⁷]irgal\[Em]mazz!
   \endverse
 
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
-    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn m\_{á}r!
+    \[Em]Nézd, \[H\⁷]ránk tör \[Em]a bűn m\_{á}r!
     \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
-    \[G]Uram, \[H7]irgal\[Em]mazz!
+    \[G]Uram, \[H\⁷]irgal\[Em]mazz!
   \endchorus
 
   \beginverse
@@ -32,9 +32,9 @@
 
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
-    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn m\_{á}r!
+    \[Em]Nézd, \[H\⁷]ránk tör \[Em]a bűn m\_{á}r!
     \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
-    \[G]Krisztus, \[H7]kegyel\[Em]mezz!
+    \[G]Krisztus, \[H\⁷]kegyel\[Em]mezz!
   \endchorus
 
   \beginverse
@@ -44,9 +44,9 @@
 
   \beginchorus
     \[Em!]Segíts! \echo{Segíts!} \[Am!]Ne hagyj! \echo{Ne hagyj!}
-    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn m\_{á}r!
+    \[Em]Nézd, \[H\⁷]ránk tör \[Em]a bűn m\_{á}r!
     \[Em!]Te adj \echo{Te adj} \[Am!]erőt! \echo{erőt!}
-    \[G]Uram, \[H7]irgal\[Em]mazz!
+    \[G]Uram, \[H\⁷]irgal\[Em]mazz!
   \endchorus
 
 \endsong
