--- a/songs/mennek-az-asszonyok.tex
+++ b/songs/mennek-az-asszonyok.tex
@@ -6,7 +6,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: /: \[D] \[D4-D-D2] :/ \rep{2}}
+      {\nolyrics Előjáték: /: \[D] \[D\⁴-D-D\²] :/ \rep{2}}
     \endverse
   \fi
 
@@ -24,8 +24,8 @@
 
   \beginchorus
     \[G]Miért keresitek Őt, az élőt a holtak között?
-    \[D]Miért keresitek Őt? \[A]Nincsen itt, \[A7]feltáma\[D]dott! \[G]
-    Nincsen \[D]itt, \[A] feltámad\[D]ott! \[D4] \[D]
+    \[D]Miért keresitek Őt? \[A]Nincsen itt, \[A\⁷]feltáma\[D]dott! \[G]
+    Nincsen \[D]itt, \[A] feltámad\[D]ott! \[D\⁴] \[D]
   \endchorus
 
   \beginverse
