--- a/songs/mily-gyonyoru-dicserni-teged.tex
+++ b/songs/mily-gyonyoru-dicserni-teged.tex
@@ -7,7 +7,7 @@
 
   \beginchorus
     \[G] Mily \[D]gyönyörű \[C]dicsérni \[G]Téged!
-    \[Am] Mily \[Am7]gyönyörű \[D]áldani Téged!
+    \[Am] Mily \[Am\⁷]gyönyörű \[D]áldani Téged!
     \[G] Jöjj, énekelj \[C]új dalt az Úrnak!
     Jöjj, \[G]áldjuk Őt, \[D]zengjen a \[C]{d\_{a}}l!
     Jöjj, \[G]áldjuk Őt, \[D]zengjen a \[C]dal!
@@ -17,7 +17,7 @@
     \[Em]Végtelen nagy Szeretet–\[Hm]Isten,
     Mint a \[C]tiszta kék ég ölelsz át minket,
     És \[Am]emberré lettél, \[D]eljöttél hozzánk,
-    Hogy így \[H7]mindörökké köztünk \[C]élj, és ezért:
+    Hogy így \[H\⁷]mindörökké köztünk \[C]élj, és ezért:
   \endverse
 
   \refrain
