--- a/songs/minden-mi-el.tex
+++ b/songs/minden-mi-el.tex
@@ -11,14 +11,14 @@
     \[D]Minden, mi él, csak Téged h\_{i}rdet,
     \[Hm]Minden dicsér, mert mind a m\_{ű}ved,
     \[G]Azzal, hogy él, ezt zengi N\_{é}ked:
-    \[A]Dicsérlek én, \[A7]dicsérlek T\_{é}g\_{e}d!
+    \[A]Dicsérlek én, \[A\⁷]dicsérlek T\_{é}g\_{e}d!
   \endchorus
 
   \beginverse\memorize
     \[D]Dicsér az ég, Nap, Hold és csillagok,
     \[Hm]Fény és sötét, nap, éj és hajnalok.
     \[G]Dicsér a szél, felhő és hóvihar,
-    \[A]A víz s a tűz, \[A7]megannyi tiszta dallal!
+    \[A]A víz s a tűz, \[A\⁷]megannyi tiszta dallal!
   \endverse
 
   \refrain
