--- a/songs/most-nem-sietek.tex
+++ b/songs/most-nem-sietek.tex
@@ -12,7 +12,7 @@
     \[G]Most nem teszek \[D]semmit sem,
     Csak \[C]engedem, hogy \[D]szeressen az \[G]Ist\_{e}n.
     \[G]Most nem teszek \[D]semmit sem,
-    Csak \[G]engedem, hogy \[H7]szeressen az \[Em]Isten.
+    Csak \[G]engedem, hogy \[H\⁷]szeressen az \[Em]Isten.
   \endchorus
 
   \beginverse
