--- a/songs/nagy-vagy-urunk.tex
+++ b/songs/nagy-vagy-urunk.tex
@@ -5,15 +5,15 @@
 
   \beginverse
     Ő \[A]tündöklő Király, \[F#m]fénye ragyog ránk,
-    Hadd örvendjen a \[D2]Föld, örvendjen a Föld.
+    Hadd örvendjen a \[D\²]Föld, örvendjen a Föld.
     Ő \[A]fényben lakozik, s a \[F#m]sötét eltűnik,
-    Hangjára megre\[D2]meg, ha szól az megremeg.
+    Hangjára megre\[D\²]meg, ha szól az megremeg.
   \endverse
 
   \beginchorus
     Mily’ \[A]nagy vagy Urunk, énekeljük:
     \[F#m]Nagy vagy Urunk, mind meglátjuk,
-    \[Dmaj7]Nagy, mily’ n\[E]agy vagy Ur\[A]unk.
+    \[D\ᵐᵃʲ\⁷]Nagy, mily’ n\[E]agy vagy Ur\[A]unk.
   \endchorus
 
   \beginverse
@@ -28,7 +28,7 @@
   \beginverse*
     /: \[A]Méltó nagy Neved,
     \[F#m]Minden név felett,
-    A \[Dmaj7]szívünk áld,
+    A \[D\ᵐᵃʲ\⁷]szívünk áld,
     Mily’ n\[E]agy vagy Ur\[A]unk. :/
   \endverse
 
