--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -2,7 +2,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[D4] \[D] \[D4] \[D]}
+      {\nolyrics Előjáték: \[D\⁴] \[D] \[D\⁴] \[D]}
     \endverse
   \fi
 
@@ -26,7 +26,7 @@
 
   \beginchorus
     \[Hm]Mert Isten \[F#m]m{\_{ű}}ve \[G]minden \[A]teremt\[D]mény,
-    \[Hm] Érzem jó\[F#m]ságát, és \[G]szívem újra {\[A4 A]é}l!
+    \[Hm] Érzem jó\[F#m]ságát, és \[G]szívem újra {\[A\⁴ A]é}l!
   \endchorus
 
   \beginverse
@@ -41,7 +41,7 @@
     ^Fivérem ^Nap és ^n{\_{ő}}^vérem ^Hold,
     ^ Most végre ^látok, s ^hallom ^hango^tok!
     ^ Megölel^ném az ^egész ^vilá^got!
-    % ^ Megölel^ném az ^egész ^vilá\[Gm]got! \[Gm7] ^
+    % ^ Megölel^ném az ^egész ^vilá\[Gm]got! \[Gm\⁷] ^
   \endverse
 
 \endsong
