--- a/songs/o-az-ur.tex
+++ b/songs/o-az-ur.tex
@@ -8,13 +8,13 @@
   \fi
 
   \beginverse\memorize
-    Ő az \[H7]Úr! Ő az \[E]Úr! Meghalt értem a ke\[C#m]reszten, Ő az \[H7]Úr!
+    Ő az \[H\⁷]Úr! Ő az \[E]Úr! Meghalt értem a ke\[C#m]reszten, Ő az \[H\⁷]Úr!
   \endverse
 
   \beginchorus
-    Minden \[E]térd megha\[E7]joljon,
+    Minden \[E]térd megha\[E\⁷]joljon,
     Minden \[A]nyelv csak Róla \[F#m]szóljon,
-    Mert \[E]Jézus, \[H7]Ő az \[E A E]Úr!
+    Mert \[E]Jézus, \[H\⁷]Ő az \[E A E]Úr!
   \endchorus
 
   \beginverse
@@ -47,7 +47,7 @@
 
   \beginverse*
     Ő az ^Úr! \echo{Ő az Úr!} Ő az ^Úr! \echo{Ő az Úr!}
-    Ő az \[H7]Úr! \echo{Ő az Úr!} Ő az {\[A E]Ú}r! \echo{Ő az Úr!}
+    Ő az \[H\⁷]Úr! \echo{Ő az Úr!} Ő az {\[A E]Ú}r! \echo{Ő az Úr!}
   \endverse
 
 \endsong
