--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -6,16 +6,16 @@
 
   \beginverse*
     \[F]Szívemből \[C]ünnepi \[F]ének á\[C]rad,
-    \[G]Háladalt \[G7]éneklek az \[F]ég Urá\[C]nak!
-    \[G]Ujjongva \[G7]tör fel a \[F]hála ben\[C]nem,
-    \[Dm]Jósága körülvesz \[G]szárnyként \[G7]en\[C]gem. \[Dm] \[G] \[C]
+    \[G]Háladalt \[G\⁷]éneklek az \[F]ég Urá\[C]nak!
+    \[G]Ujjongva \[G\⁷]tör fel a \[F]hála ben\[C]nem,
+    \[Dm]Jósága körülvesz \[G]szárnyként \[G\⁷]en\[C]gem. \[Dm] \[G] \[C]
   \endverse
 
   \beginverse*
-    /: \[G]Adjatok \[G7]hálát az \[C]Istennek!
-    \[G7]Adjatok hálát az \[C]Istennek!
-    \[C7]Ő a mi teremtő \[F]Kirá\[G]lyunk,
-    \[D]Alle-allelu\[G]ja, \[F]allelu\[C]ja, \[F]allelu\[C]ja! :/ \rep{2} \[H7]
+    /: \[G]Adjatok \[G\⁷]hálát az \[C]Istennek!
+    \[G\⁷]Adjatok hálát az \[C]Istennek!
+    \[C\⁷]Ő a mi teremtő \[F]Kirá\[G]lyunk,
+    \[D]Alle-allelu\[G]ja, \[F]allelu\[C]ja, \[F]allelu\[C]ja! :/ \rep{2} \[H\⁷]
   \endverse
 
   \beginverse*
