--- a/songs/peter-ne-sirj.tex
+++ b/songs/peter-ne-sirj.tex
@@ -8,8 +8,8 @@
   \endverse
 
   \beginchorus
-    \[Am]Péter, ne \[Em]sírj, mert \[H7]Jézus megbo\[Em]csát,
-    \[Am]Péter, ne \[Em]s{\_{í}}rj, hisz' \[H7]tudod, hogy megbo\[Em]csát!
+    \[Am]Péter, ne \[Em]sírj, mert \[H\⁷]Jézus megbo\[Em]csát,
+    \[Am]Péter, ne \[Em]s{\_{í}}rj, hisz' \[H\⁷]tudod, hogy megbo\[Em]csát!
   \endchorus
 
   \beginverse
