--- a/songs/rajta-dicserjetek-az-ur-nevet.tex
+++ b/songs/rajta-dicserjetek-az-ur-nevet.tex
@@ -8,16 +8,16 @@
 
   \beginchorus
     Rajta, di\[G]csérjé\[C]tek az Úr ne\[G]vét,
-    Ti \[C]mindnyájan, kik \[G]hűen \[Em]szolgáljátok \[D]Őt! \[D4] \[D]
+    Ti \[C]mindnyájan, kik \[G]hűen \[Em]szolgáljátok \[D]Őt! \[D\⁴] \[D]
     Áldjátok \[G]hát há\[C]romszor szent ne\[G]vét,
     Ma\[C]gasztaljátok \[G]ének\[Am]szóval \[D]örök\[G]ké! \[C] \[G]
   \endchorus
 
   \beginverse\memorize
     Igen, tu\[Em]dom, Istenünk hatal\[C]mas,
-    Végbevisz \[Am]mindent, amit csak a\[D]k\[H7]ar.
+    Végbevisz \[Am]mindent, amit csak a\[D]k\[H\⁷]ar.
     A hegyek\[Em]től a tenger mélyé\[C]ig,
-    A földtől az \[Am]égbolt magasságá\[D]ig. \[D4] \[D]
+    A földtől az \[Am]égbolt magasságá\[D]ig. \[D\⁴] \[D]
   \endverse
 
   \refrain
