--- a/songs/ropke-fohasz.tex
+++ b/songs/ropke-fohasz.tex
@@ -1,15 +1,15 @@
 \beginsong{Röpke fohász}[]
 
   \beginchorus
-    /: Röpke fo\[G]hászként száll a \[Em]dal égbe szá\[Hm7]rnyaló ma\[D]dár,
+    /: Röpke fo\[G]hászként száll a \[Em]dal égbe szá\[Hm\⁷]rnyaló ma\[D]dár,
     Fészkét \[G]el\[D]hagyta m\[Em]ár, Hozzád ta\[C]lál. \[D] :/ \rep{2}
   \endchorus
 
   \beginverse
     \[G]Élsz, vagy utazol \[Hm]bárhol, de \[Em]Hozzá szól a sz\[C]ív,
-    \[G]Bánat ér vagy \[Hm]öröm táncra h\[Am7]ív. \[D]
+    \[G]Bánat ér vagy \[Hm]öröm táncra h\[Am\⁷]ív. \[D]
     Mint \[G]forrás tört fel a \[D]sóhaj, mint \[Em]tenger árad a \[Hm]hála.
-    \[C]Hallja Ő, egy \[G]szó elég, az \[Am7]egekig felé\[D7]r!
+    \[C]Hallja Ő, egy \[G]szó elég, az \[Am\⁷]egekig felé\[D\⁷]r!
   \endverse
 
   \refrain
