--- a/songs/sotet-fenn-az-eg.tex
+++ b/songs/sotet-fenn-az-eg.tex
@@ -10,13 +10,13 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[Em] \[Em] /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H7] :/ \rep{2} \[Em] \[Em]}
+       {\nolyrics Előjáték: \[Em] \[Em] /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H\⁷] :/ \rep{2} \[Em] \[Em]}
     \endverse
   \fi
 
   \beginverse\memorize
     \[Em]Sötét fenn az \[Hm]ég, \[G]fény sehol sem \[D]ég,
-    Az \[C]arcomra \[G]álmos köd szi\[H7]tál;
+    Az \[C]arcomra \[G]álmos köd szi\[H\⁷]tál;
     \[Em]Süket, sűrű \[Hm]csönd, \[G]némaság kö\[D]szönt,
     És \[C]senki sincs, ki \[G]fénylő jelet \[F#]gyújtson az éjsza\[H]kán!
   \endverse
@@ -24,15 +24,15 @@
   \beginchorus
     Jöjj el \[A]hát, Iste\[E]nem,
     Lobbants \[H]lángot az éjje\[C#m]len!
-    Élő \[A]irgalmadat \[H]terjeszd ki fö\[E]l\[H7]énk!
+    Élő \[A]irgalmadat \[H]terjeszd ki fö\[E]l\[H\⁷]énk!
     Jöjj el \[A]hát, Iste\[E]nem,
     Nyíljon \[H]már ki a végte\[C#m]len!
-    Jöjj el, \[A]gyermekarcú \[E]Isten, \[H7]szállj kö\[E]zénk! \[E]
+    Jöjj el, \[A]gyermekarcú \[E]Isten, \[H\⁷]szállj kö\[E]zénk! \[E]
   \endchorus
 
   \ifchorded
     \beginverse*
-       {\nolyrics Közjáték: /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H7] :/ \rep{2} \[Em] \[Em] }
+       {\nolyrics Közjáték: /: \[Em] \[Hm] \[G] \[D] \[C] \[G] \[H] \[H\⁷] :/ \rep{2} \[Em] \[Em] }
     \endverse
   \fi
 
