--- a/songs/szentlelek.tex
+++ b/songs/szentlelek.tex
@@ -4,9 +4,9 @@
 ]
 
   \beginchorus
-    Szent\[D2]lé\[D]lek, úgy \[D2]kérünk, szállj le r\[D]ánk,
+    Szent\[D\²]lé\[D]lek, úgy \[D\²]kérünk, szállj le r\[D]ánk,
     Töltsd el a \[G]szívünk, \[Em] éle\[A]tünk,
-    Hogy \[D2]bé\[D]ke és \[D2]áldás szálljon \[D]ránk,
+    Hogy \[D\²]bé\[D]ke és \[D\²]áldás szálljon \[D]ránk,
     Küldd el a \[G]Lelked, úgy \[A]kérünk, Isten\[D]ünk.
   \endchorus
 
