--- a/songs/taplalo-szent-kenyer.tex
+++ b/songs/taplalo-szent-kenyer.tex
@@ -5,9 +5,9 @@
 
   \beginverse*
     /: Tápláló \[D]szent kenyér, tápláló \[Hm]drága vér,
-    Betölti \[Em]szívemet a végte\[A4]len. \[A]
+    Betölti \[Em]szívemet a végte\[A\⁴]len. \[A]
     Békémnek \[D]záloga, lelkemnek \[Hm]otthona,
-    Formáld át \[Em]életem, légy ve\[A4]lem! \[A] :/ \echo{Légy ve\[D]lem!}
+    Formáld át \[Em]életem, légy ve\[A\⁴]lem! \[A] :/ \echo{Légy ve\[D]lem!}
   \endverse
 
 \endsong
