--- a/songs/te-vagy-az-ut.tex
+++ b/songs/te-vagy-az-ut.tex
@@ -15,7 +15,7 @@
 
   \beginchorus\memorize[chorus]
     /: \[A]Megszabadítot\[F#m]tál, \[E]kenyeret, s bort ad\[C#m]tál.
-    \[E]Tested és véred t\[H]áplál, hűséged \[E]éltet. \var{1.}\[E7]Alleluja! \var{2.} \transpose{1} \[H7] :/ \rep{2}
+    \[E]Tested és véred t\[H]áplál, hűséged \[E]éltet. \var{1.}\[E\⁷]Alleluja! \var{2.} \transpose{1} \[H\⁷] :/ \rep{2}
   \endchorus
 
   \transpose{1}
