--- a/songs/te-vagy-szerelme.tex
+++ b/songs/te-vagy-szerelme.tex
@@ -4,25 +4,25 @@
 ]
   
   \ifchorded
-    \gtab{D2}{XX0230}
+    \gtab{D\²}{XX0230}
     \gtab{D/F#}{300232}
-    \gtab{G2/H}{X20033}
+    \gtab{G\²/H}{X20033}
     \gtab{A/C#}{X42220}
   \fi
 
   \beginverse
     \[D]Te vagy sze\[A/C#]relme \[D/F#]életemn\[G]ek,
-    \[D] Barát és \[A/C#]társ, aki s\[G2/H]zeret. \[A/C#]
+    \[D] Barát és \[A/C#]társ, aki s\[G\²/H]zeret. \[A/C#]
     \[D] Érinté\[A/C#]sedet \[D/F#]várja lény\[G]em,
-    \[D] Teljes szí\[A/C#]vemből sze\[G2/H]retlek!
+    \[D] Teljes szí\[A/C#]vemből sze\[G\²/H]retlek!
   \endverse
 
   \beginchorus
-    \[G2/H] Vonj most magadhoz \[A/C#]még job\[D]ban, \[D2]
-    \[A/C#] Végy fel \[G2/H]a ka\[A/C#]rjaidb\[D]a,
-    \[G2/H] Szíved dobbanását \[A/C#]hadd hallj\[D]am,
-    \[A/C#] Ó, \[G2/H] \[A/C#] Jéz\[D]us,
-    \[A/C#] Ó, \[G2/H] \[A]Jéz\[D]us!
+    \[G\²/H] Vonj most magadhoz \[A/C#]még job\[D]ban, \[D\²]
+    \[A/C#] Végy fel \[G\²/H]a ka\[A/C#]rjaidb\[D]a,
+    \[G\²/H] Szíved dobbanását \[A/C#]hadd hallj\[D]am,
+    \[A/C#] Ó, \[G\²/H] \[A/C#] Jéz\[D]us,
+    \[A/C#] Ó, \[G\²/H] \[A]Jéz\[D]us!
   \endchorus
 
 \endsong
