--- a/songs/terad-var-egy-szep-orszag.tex
+++ b/songs/terad-var-egy-szep-orszag.tex
@@ -3,10 +3,10 @@
   \beginverse\memorize
     Terád \[E]vár egy szép ország,
     Terád \[A]vár egy szép or\[E]szág,
-    Terád vár egy szép ország, ahová me\[H7]gyek. \echo{Ahová megyek.}
-    Terád \[E]vár egy szép or\[E7]szág,
+    Terád vár egy szép ország, ahová me\[H\⁷]gyek. \echo{Ahová megyek.}
+    Terád \[E]vár egy szép or\[E\⁷]szág,
     Terád \[A]vár egy szép or\[Am]szág,
-    Terád \[E]vár egy szép or\[H7]szág, ahová me\[E]gyek. \echo{Aho\[A]vá me\[E]gyek.}
+    Terád \[E]vár egy szép or\[H\⁷]szág, ahová me\[E]gyek. \echo{Aho\[A]vá me\[E]gyek.}
   \endverse
 
   \beginverse
