--- a/songs/teremts-bennem.tex
+++ b/songs/teremts-bennem.tex
@@ -17,13 +17,13 @@
 
   \beginverse*
     /: \[Am]Ne vess el en\[D]gem a Te or\[G]cád e\[Em]lől!
-    \[Am]Szentlelked \[D]ne vond meg tő\[G]lem! \[G7]
+    \[Am]Szentlelked \[D]ne vond meg tő\[G]lem! \[G\⁷]
     \[Am]Támogass az \[D]engedelmes\[G]ség lelké\[Em]vel!
-    \[Am7]Szabadításod \[D7]örömét add ne\[G]kem! \[G7] :/ \rep{2}
+    \[Am\⁷]Szabadításod \[D\⁷]örömét add ne\[G]kem! \[G\⁷] :/ \rep{2}
   \endverse
 
   \beginverse*
-    \[Am7]Szabadításod \[D7]örömét add ne\[G]kem! \[C] \[G]
+    \[Am\⁷]Szabadításod \[D\⁷]örömét add ne\[G]kem! \[C] \[G]
   \endverse
 
 \endsong
