--- a/songs/tied-a-dicsoseg.tex
+++ b/songs/tied-a-dicsoseg.tex
@@ -5,12 +5,12 @@
 
   \beginverse\memorize
     /: Tied a di\[C]csőség és i\[Em]mádás,
-    Fele\[F]meljük keze\[Dm]inket, így di\[G]csérjük szent nev\[G7]ed! :/ \rep{2}
+    Fele\[F]meljük keze\[Dm]inket, így di\[G]csérjük szent nev\[G\⁷]ed! :/ \rep{2}
   \endverse
 
   \beginchorus
     /: Ó hatal\[C]mas, kezed nagy csodákat \[Am]tesz,
-    Veled senki nem ér \[F]fel, \[Dm] Veled \[G]senki nem ér \[G7]fel! :/ \rep{2}
+    Veled senki nem ér \[F]fel, \[Dm] Veled \[G]senki nem ér \[G\⁷]fel! :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
