--- a/songs/uram-tehozzad-futok.tex
+++ b/songs/uram-tehozzad-futok.tex
@@ -1,7 +1,7 @@
 \beginsong{Uram, Tehozzád futok}[]
 
   \beginverse*\memorize
-    Uram, \[Em]Tehozzád fu\[D]tok, élő \[Hm7]vízre szomja\[Em]zom,
+    Uram, \[Em]Tehozzád fu\[D]tok, élő \[Hm\⁷]vízre szomja\[Em]zom,
     Közel\[C]séged, ó mily \[D]jó énné\[Em]kem. \[Em!]
   \endverse
 
@@ -11,8 +11,8 @@
   \endverse
 
   \beginverse*
-    Én pedig \[G]szüntelen remél\[D]ek, egyre \[Hm7]jobban dicsér\[Em]lek,
-    Ajkam \[Am7]beszéli a Te \[Am/F#]igazságo\[H4]dat. \[H]
+    Én pedig \[G]szüntelen remél\[D]ek, egyre \[Hm\⁷]jobban dicsér\[Em]lek,
+    Ajkam \[Am\⁷]beszéli a Te \[Am/F#]igazságo\[H\⁴]dat. \[H]
     Hadd le\[G]gyen most a da\[D]lom jó i\[Hm]llat oltáro\[Em]don,
     Nagyon \[C]szeretlek Té\[D]ged, Jézu\[Em]som. \[Em!]
   \endverse
