--- a/songs/utad-var-rad.tex
+++ b/songs/utad-var-rad.tex
@@ -5,7 +5,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Dm-Dm4-Dm] \[F-F2-F] \[C-C4-C] \[Dm!-A!]}
+      {\nolyrics Előjáték: \[Dm-Dm\⁴-Dm] \[F-F\²-F] \[C-C\⁴-C] \[Dm!-A!]}
     \endverse
   \fi
 
