--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -13,9 +13,9 @@
   \endverse
 
   \beginchorus
-    Oh, oh, \[E7]oh!
+    Oh, oh, \[E\⁷]oh!
     Hol van az {\[Am G F]{\_{ú}}}t? \[E]Hol van a f{\[Am G F]{\_{é}}}ny, \[E]az igazs{\[Am G F]{\_{á}}}g,
-    Ami haza\[E]visz? Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
+    Ami haza\[E]visz? Oh-\[E\⁷]oh-oh, \[E]oh-oh, \[E\⁷]oh-oh!
   \endchorus
 
   \beginverse
@@ -46,9 +46,9 @@
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált,
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált,
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált:
-    Oh, oh, \[E7]oh!
+    Oh, oh, \[E\⁷]oh!
     Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, \[E]és az él{\[Am G F]{\_{e}}}t,
-    Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
+    Ami haza\[E]visz! Oh-\[E\⁷]oh-oh, \[E]oh-oh, \[E\⁷]oh-oh!
   \endverse
 
   \beginverse*
@@ -56,9 +56,9 @@
   \endverse
 
   \beginverse*
-    Oh, oh, \[E7]oh!
+    Oh, oh, \[E\⁷]oh!
     Én vagyok az {\[Am G F]{\_{ú}}}t, \[E]az igazs{\[Am G F]{\_{á}}}g, \[E]és az él{\[Am G F]{\_{e}}}t,
-    Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
+    Ami haza\[E]visz! Oh-\[E\⁷]oh-oh, \[E]oh-oh, \[E\⁷]oh-oh!
   \endverse
 
   \beginverse*
