--- a/songs/vedd-a-szivem.tex
+++ b/songs/vedd-a-szivem.tex
@@ -3,34 +3,34 @@
   \versesep=12pt plus 3pt minus 12pt
 
   \ifchorded
-    \gtab{Dm7}{XX0211}
-    \gtab{Fmaj7}{102210}
+    \gtab{Dm\⁷}{XX0211}
+    \gtab{F\ᵐᵃʲ\⁷}{102210}
   \fi
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: /: \[Am] \[C] \[G] \[Fmaj7] :/ \rep{2}}
+       {\nolyrics Előjáték: /: \[Am] \[C] \[G] \[F\ᵐᵃʲ\⁷] :/ \rep{2}}
     \endverse
   \fi
 
   \beginverse
-    \[Am]Eljöttem, hogy meghajtsam \[C]térdemet. Tiéd va\[G]gyok! Tiéd va\[Fmaj7]gyok!
-    \[Am]Várj most rám, ölelj át, \[C]vágyom Rád! Éhezem \[G]Rád! Éhezem \[Fmaj7]Rád!
-    Vedd a \[Am]szívem! \[C] \[G] \[Fmaj7]
+    \[Am]Eljöttem, hogy meghajtsam \[C]térdemet. Tiéd va\[G]gyok! Tiéd va\[F\ᵐᵃʲ\⁷]gyok!
+    \[Am]Várj most rám, ölelj át, \[C]vágyom Rád! Éhezem \[G]Rád! Éhezem \[F\ᵐᵃʲ\⁷]Rád!
+    Vedd a \[Am]szívem! \[C] \[G] \[F\ᵐᵃʲ\⁷]
   \endverse
   \beginverse
-    \[Am]Irgalmad, kegyelmed \[C]járjon át! Szomjazom R\[G]ád! Szomjazom \[Fmaj7]Rád!
-    Ki\[Am]tárt karral, könnyek közt \[C]áldalak! Szólj most hozz\[G]ám! Szólj most ho\[Fmaj7]zzám!
+    \[Am]Irgalmad, kegyelmed \[C]járjon át! Szomjazom R\[G]ád! Szomjazom \[F\ᵐᵃʲ\⁷]Rád!
+    Ki\[Am]tárt karral, könnyek közt \[C]áldalak! Szólj most hozz\[G]ám! Szólj most ho\[F\ᵐᵃʲ\⁷]zzám!
   \endverse
 
   \beginchorus
     /: Vedd a \[Am]szívem! Vedd a \[C]szívem!
-    Vágyom Rád \[Dm7]még jobban! Vágyom Rád \[F]még jobban! :/ \rep{2}
+    Vágyom Rád \[Dm\⁷]még jobban! Vágyom Rád \[F]még jobban! :/ \rep{2}
   \endchorus
 
   \ifchorded
     \beginverse*
-       {\nolyrics \[F] \[C] \[G] \[Dm7] \[Am] \[G]}
+       {\nolyrics \[F] \[C] \[G] \[Dm\⁷] \[Am] \[G]}
     \endverse
   \fi
 
@@ -38,10 +38,10 @@
 
   \beginverse*
     /: Mint egy \[F]zúgó \[C]szél, Jézus \[G]bennem él!\
-    Uram Ti\[Dm7]éd, \shrink Uram, Ti\[Am]éd \shrink min\[G]den!
+    Uram Ti\[Dm\⁷]éd, \shrink Uram, Ti\[Am]éd \shrink min\[G]den!
     Mint egy \[F]nagy vi\[C]har, Jézus \[G]felkavar!\
-    Uram Ti\[Dm7]éd, \shrink Uram, Ti\[Am]éd \shrink min\[G]den! :/ \rep{2}
-    Uram Ti\[Dm7]éd, Uram, Ti\[Am]éd mind\[G]en!
+    Uram Ti\[Dm\⁷]éd, \shrink Uram, Ti\[Am]éd \shrink min\[G]den! :/ \rep{2}
+    Uram Ti\[Dm\⁷]éd, Uram, Ti\[Am]éd mind\[G]en!
   \endverse
 
   \refrain
