--- a/songs/vilagnak-krisztus-kell.tex
+++ b/songs/vilagnak-krisztus-kell.tex
@@ -5,19 +5,19 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[E] \[H7] \[E] \[A] \[E]}
+      {\nolyrics Előjáték: \[E] \[H\⁷] \[E] \[A] \[E]}
     \endverse
   \fi
 
   \beginchorus
-    /: A \[E]világnak \[H7] Krisztus \[E]kell!
-    A \[A]világnak \[E] Krisztus \[H7]kell!
+    /: A \[E]világnak \[H\⁷] Krisztus \[E]kell!
+    A \[A]világnak \[E] Krisztus \[H\⁷]kell!
     A \[E]világnak \[G#]kellesz \[C#m]te is,
-    \[A]Mivel te \[E]Krisztushoz \[H7]tartoz\[E]ol! :/ \rep{2}
+    \[A]Mivel te \[E]Krisztushoz \[H\⁷]tartoz\[E]ol! :/ \rep{2}
   \endchorus
 
   \beginverse*
-    \[A]Emlé\[E]kezz! \[A]Emlé\[E]kezz, te \[E]Krisztushoz \[H7]tartoz\[E]ol.
+    \[A]Emlé\[E]kezz! \[A]Emlé\[E]kezz, te \[E]Krisztushoz \[H\⁷]tartoz\[E]ol.
   \endverse
 
 \endsong
