--- a/songs-taize/csak-vandorolunk.tex
+++ b/songs-taize/csak-vandorolunk.tex
@@ -4,7 +4,7 @@
 ]
 
   \beginverse*
-    Csak \[Dm]vándorolunk az \[A#]éjben, mert \[C6]forrás vi\[Gm/A#]zére \[A4]vá\[A]gyunk.
+    Csak \[Dm]vándorolunk az \[A#]éjben, mert \[C\⁶]forrás vi\[Gm/A#]zére \[A\⁴]vá\[A]gyunk.
     \[Dm]Szomjunk a \[C]fény a sö\[F]{t\_{é}}t\[A]ben, szomjunk a \[A#]fény a sö\[A]tétben.
   \endverse
 
