--- a/songs/beke-napja-kozel.tex
+++ b/songs/beke-napja-kozel.tex
@@ -4,7 +4,7 @@
 ]
 
   \beginverse*
-    A \[F]béke \[C]napja köz\[Dm]e\[A#]l, \[F]nézd, már \[A#]fénylik a \[C]jel! \[C7]
+    A \[F]béke \[C]napja köz\[Dm]e\[A#]l, \[F]nézd, már \[A#]fénylik a \[C]jel! \[C\⁷]
     \[F]Jézus \[A]szíve a \[A#]Földön, az \[F]é\[C]gen \[F]mindent \[C]egybeöl\[F]el.
   \endverse
 
