--- a/songs/kesz-az-en-szivem.tex
+++ b/songs/kesz-az-en-szivem.tex
@@ -6,7 +6,7 @@
 
   \beginverse\memorize
     Kész az \[Dm]én sz\_{í}vem, Uram, \[Gm]Néked zeng a \[Dm]dalom.
-    Elő hát hárfa, lant, hadd kel\[C]tsem fel a h\_{a}j\[A]nalt! \[A4] \[A]
+    Elő hát hárfa, lant, hadd kel\[C]tsem fel a h\_{a}j\[A]nalt! \[A\⁴] \[A]
   \endverse
 
   \beginchorus
