--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -9,13 +9,13 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[D] \[D4] \[D]}
+       {\nolyrics Előjáték: \[D] \[D\⁴] \[D]}
     \endverse
   \fi
 
   \beginchorus
     Lelkem, \[G]áldd az Ur\[D]at, \[A/C#]{\_{á}}ldd az U\[Hm]rat,
-    \[G]Egyedül \[D]Őt im\[A4]ádd! \[A]
+    \[G]Egyedül \[D]Őt im\[A\⁴]ádd! \[A]
     Zengj úgy, \[G]mint soha \[Hm]még, \[G]Őt \[A]di\[Hm]csérd!
     A l\[G]elkem csak T\[A]éged \[G/D]áld! \[D] \[G/D] \[D]
   \endchorus
@@ -24,7 +24,7 @@
     Egy \[G]új nap \[D]kél, és már \[A]ébred \[Hm]minden,
     \[G] Itt az id\[D]ő, hogy \[A]áldja\[Hm]lak,
     És \[G]bármi \[D]ér, bármit r\[A]ejt az út el\_{ő}t\[Hm]tem,
-    \[G] Hadd zengjek \[D]este is majd \[A4]há\[A]lá\[D]val! \[D4] \[D]
+    \[G] Hadd zengjek \[D]este is majd \[A\⁴]há\[A]lá\[D]val! \[D\⁴] \[D]
   \endverse
 
   \refrain
