--- a/songs/ne-felj-mert-megvaltottalak.tex
+++ b/songs/ne-felj-mert-megvaltottalak.tex
@@ -7,7 +7,7 @@
     /: \[D]Ne félj, mert \[G]megváltotta\[A]lak,
     Neveden \[D]szólította\[Hm]lak,
     Karja\[Em]imba zárta\[A]lak,
-    Örökre \[A7]enyém \[D]vagy! :/ \rep{2}
+    Örökre \[A\⁷]enyém \[D]vagy! :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
@@ -15,7 +15,7 @@
     \[Hm]Pásztorod va\[Em]gyok, elveszni \[A]senkit nem ha\[D]gyok.
     Karom fe\[Hm]léd t\_{á}\[Em]rom, kiárad \[G]áld\_{á}\[D]som.
     \[Hm]Nem rejtőzöm \[Em]el, szívem a \[A]szívednek fe\[D]lel,
-    Amikor \[Hm]úgy \_{é}r\[Em]zed, nyomaszt az \[A7]{\_{é}}\[D]let.
+    Amikor \[Hm]úgy \_{é}r\[Em]zed, nyomaszt az \[A\⁷]{\_{é}}\[D]let.
   \endverse
 
   \refrain
