--- a/songs/nincs-mas-isten.tex
+++ b/songs/nincs-mas-isten.tex
@@ -7,13 +7,13 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: /: \[Em7] \[Cadd2] \[G] \[D/F#] :/ \rep{2}}
+      {\nolyrics Előjáték: /: \[Em\⁷] \[C\ᵃᵈᵈ\²] \[G] \[D/F#] :/ \rep{2}}
     \endverse
   \fi
 
   \beginverse\memorize
     \[Em]Nálad lett \[C]borrá a \[Em]víz, \[C] h\[Em]oltakat \[C]életre \[G]hívsz,
-    Nincs más \[Am7]isten, nincsen \[D]más.
+    Nincs más \[Am\⁷]isten, nincsen \[D]más.
   \endverse
 
   \beginverse
@@ -30,7 +30,7 @@
 
     \ifchorded
       \vspace{0.3cm}
-      {\nolyrics Közjáték: /: \[Em7] \[Cadd2] \[G] \[D/F#] :/ \rep{2}}
+      {\nolyrics Közjáték: /: \[Em\⁷] \[C\ᵃᵈᵈ\²] \[G] \[D/F#] :/ \rep{2}}
       \vspace{0.3cm}
     \fi
 
