--- a/songs/o-te-vagy-uram.tex
+++ b/songs/o-te-vagy-uram.tex
@@ -4,13 +4,13 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[A] \[D] \[A] \[D] \[A] \[F#m] \[C#m] \[D] \[Hm] \[D] \[E] \[E7]}
+      {\nolyrics Előjáték: \[A] \[D] \[A] \[D] \[A] \[F#m] \[C#m] \[D] \[Hm] \[D] \[E] \[E\⁷]}
     \endverse
   \fi
 
   \beginchorus
     /: Ó, \[A]Te vagy U\[D]ram \[A] vágyam \[D]és örö\[A]möm, \[F#m]
-    Te \[C#m]vigyázol r{\[D]\[Hm]\[D]\[E]{\_{á}}}m! \[E7] :/ \rep{2}
+    Te \[C#m]vigyázol r{\[D]\[Hm]\[D]\[E]{\_{á}}}m! \[E\⁷] :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
@@ -18,7 +18,7 @@
     \[D]Úgy tűnt, mintha álmod\[A]nánk.
     A \[C]szánk megtelt neveté\[G]ssel,
     % HACK: The `\hspace{0cm}` below is used to avoid lifting up the `Hm` chord.
-    És \[D]nyelvünk \[Hm]ujjon\hspace{0cm}gáss{\[G]\[E]\[E7]{\_{a}}}l!
+    És \[D]nyelvünk \[Hm]ujjon\hspace{0cm}gáss{\[G]\[E]\[E\⁷]{\_{a}}}l!
   \endverse
 
   \refrain
