--- a/songs/ott-lelegzel-a-fakban.tex
+++ b/songs/ott-lelegzel-a-fakban.tex
@@ -2,13 +2,13 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[D] \[A] \[A7] \[D]}
+       {\nolyrics Előjáték: \[D] \[A] \[A\⁷] \[D]}
     \endverse
   \fi
 
   \beginverse\memorize
     \[D]Ott lélegzel a \[A]f{\_{á}}k\[D]ban, \[G]ott mosolyogsz a vi\[A]r{\_{á}}gban,
-    \[A]Ott vagy a szélben, a \[D]fr{\_{i}}ssben, \_{ó}, boldog, b\_{o}ldog \[A7]{\_{I}}s\[D]ten!
+    \[A]Ott vagy a szélben, a \[D]fr{\_{i}}ssben, \_{ó}, boldog, b\_{o}ldog \[A\⁷]{\_{I}}s\[D]ten!
   \endverse
 
   \beginverse
