--- a/songs/szivem-telve-van-veled.tex
+++ b/songs/szivem-telve-van-veled.tex
@@ -10,13 +10,13 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[E] \[G#m7] \[A/H]}
+      {\nolyrics Előjáték: \[E] \[G#m\⁷] \[A/H]}
     \endverse
   \fi
 
   \beginverse*
-    \[E] A szívem \[G#m]telve van Ve\[C#m]led, \[C#m9] drága J\[A]ézus, \[E] hű Megv\[H]áltóm.
-    \[E] Hálát \[G#m]érzek mindaz\[C#m]ért, \[C#m9] mit értem t\[A]ettél, \[E] drága J\[H]ézus.
+    \[E] A szívem \[G#m]telve van Ve\[C#m]led, \[C#m\⁹] drága J\[A]ézus, \[E] hű Megv\[H]áltóm.
+    \[E] Hálát \[G#m]érzek mindaz\[C#m]ért, \[C#m\⁹] mit értem t\[A]ettél, \[E] drága J\[H]ézus.
     \[F#m] Hogy elhív\[C#m]tál és \[H]befogad\[C#m]tál,
     \[F#m] Nincsen \[C#m]más ottho\[H]nom.
     Karod \[E]óv és \[G#m]átöl\[A]el,
